feat: add GitHub Actions workflow for automatic audio generation
- Add workflow that triggers on markdown file changes
- Supports manual force regeneration via workflow_dispatch
- Automatically commits generated audio files
- Handles rate limits and incremental generation

--- a/src/book/Part I: The Axis of Becoming/1. The Axis of Consequence.md
+++ b/src/book/Part I: The Axis of Becoming/1. The Axis of Consequence.md
@@ -1,7 +1,7 @@
 # **Chapter 1 – The Axis of Consequence**
 
 You stand now, reading this, at the convergence of everything that shaped you.  
-The **state vector** – the accumulated force, the inherited momentum, the quiet pressures you never noticed – the physical structure beneath this moment.  
+The **state vector** – accumulated force, inherited momentum, quiet pressures you never noticed – the physical structure beneath this moment.  
 Your genetics, your history, your conditioning, every instinct still echoing from the past.
 
 You did not choose these forces, but you carry them.  
@@ -9,11 +9,11 @@ They sit in your breath, your posture, the reflex that fires before thought.
 A lifetime of inputs held in a single point.
 
 Most people imagine themselves travelling a line from past to future.  
-But time is not a line.  
+Time behaves differently.  
 It is a **field**, and you are the axis around which that field bends.  
 Every direction is possible, but only one becomes real.  
 Every choice tilts the architecture.  
-Every moment tightens or loosens the shape of who you’re becoming.
+Every moment tightens or loosens the shape of who you are becoming.
 
 You are not the beginning of yourself.  
 You are not the end.  
@@ -29,14 +29,13 @@ Energy flows through grooves carved long before you noticed them.
 
 Pause for a moment.  
 Feel the breath, the jaw, the chest.  
-This is **bio–telemetry** – the body reporting the forces moving through it.  
-The tightness, the heat, the subtle collapse in posture – none of it is random.  
-It is data.  
-It is the map beneath your intentions.
+This is **bio-telemetry** – the body reporting the forces moving through it.  
+The tightness, the heat, the subtle collapse in posture carry information.  
+They are not noise.  
+They are the map beneath your intentions.
 
 You are always in the middle.  
-Not conceptually.  
-Structurally.
+Not as an idea, but as a structure.
 
 Right now, everything that came before you meets everything that could come after.  
 This moment is the turning point.  
@@ -47,31 +46,30 @@ ask the deeper question:
 
 **What direction am I already moving in?**
 
-Because movement is happening whether you acknowledge it or not.  
-The habits you avoid examining still shape you.  
-The old stories still lean your posture.  
-The unspoken fears still bend your choices.
+Movement continues whether you acknowledge it or not.  
+Habits you avoid examining still shape you.  
+Old stories still lean your posture.  
+Unspoken fears still bend your choices.
 
 You are always becoming something.  
 The question is whether the becoming is deliberate.
 
-When you see the underlying motion clearly, passivity dissolves.  
+When the underlying motion becomes visible, passivity dissolves.  
 The next step stops feeling like a guess and becomes a **correction** –  
-a subtle but decisive shift in orientation.
+a small but decisive shift in orientation.
 
 A degree of tilt repeated over months reshapes a life.  
-A single change in posture alters the whole trajectory of a future.
+A single change in posture alters the trajectory of a future.
 
 This is the axis.  
-Not balance as stillness, but balance as responsiveness.  
-Not indecision, but precision.
+Balance expressed as responsiveness.  
+Precision expressed through motion.
 
 You are the point where momentum meets possibility.  
 You are the pivot where the world inside you turns.  
-You are the only place change can truly begin.
+You are the only place change can begin.
 
 Look at this moment without flinching.  
-Not to judge it.  
 To understand its structure.
 
 Then ask:
@@ -81,18 +79,15 @@ Then ask:
 If yes – deepen the stride.  
 If no – adjust the orientation.
 
-Not violently.  
 Accurately.
 
 You cannot redirect what you refuse to see.  
-But the moment you see it,  
-you are no longer dragged by inherited motion.  
+The moment perception sharpens, inherited motion loosens its grip.  
+You are no longer carried blindly forward.  
 You are operating from the centre.
 
 This is consequence –  
-not punishment,  
-not reward,  
-but truth in motion.
+truth in motion.
 
 You are the axis.  
 Everything turns here.
