--- a/src/book/Part I: The Axis of Becoming/2. The Shape of Desire.md
+++ b/src/book/Part I: The Axis of Becoming/2. The Shape of Desire.md
@@ -5,112 +5,107 @@ another question rises beneath it – quieter in volume, heavier in truth:
 
 **What is pulling me forward?**
 
-Not the surface cravings.  
-Not the reflexive wants that flare and vanish.  
-The deeper current –  
-the one that returns after distraction, after exhaustion,  
+Beyond surface cravings.  
+Beyond reflexive wants that flare and vanish.  
+There is a deeper current –  
+one that returns after distraction, after exhaustion,  
 even after fear.
 
 This current is **desire**,  
-but not the kind we usually name.
+though not the kind we usually name.
 
-Most desires are noise –  
+Much of what passes for desire is noise –  
 stimulus dressed as purpose,  
 old wounds wearing the mask of ambition,  
 the residue of other people’s expectations.  
-They burn quickly and leave nothing.
+It burns quickly and leaves nothing.
 
-Beneath them lies something steadier –  
+Beneath that noise lies something steadier –  
 a gravitational pull.
 
 In physics, every structure has a natural frequency,  
 a way of moving that costs the least energy.  
 Align with it and the system resonates.  
-Fight it and the resistance turns into heat.
+Move against it and resistance turns into heat.
 
-Desire works the same way.
+Desire follows the same mechanics.
 
 Your deeper self has a frequency –  
 a direction that feels like clarity,  
 even when the path toward it is uncomfortable.  
-You recognise it not by excitement,  
-but by the **ease** that appears when you move in its direction  
-and the **drag** you feel when you turn away.
+You recognise it through the **ease** that appears when you move with it  
+and the **drag** that arises when you turn away.
 
 Ask yourself:
 
-**What remains when the distractions fall away?**  
-**What returns even after I’ve tried to ignore it?**  
+**What remains when distraction falls away?**  
+**What returns even after long avoidance?**  
 **What feels like alignment rather than escape?**
 
 Desire is not abstract.  
 It behaves like matter.
 
 Like gravity –  
-the inevitable fall,  
-the universal sensation of sitting next to someone larger on a comfortable seat  
-and falling into their weight,  
-their well,  
-their curvature.
+the quiet inevitability of leaning into a larger mass on a shared seat,  
+the way space reshapes around weight,  
+the way your body follows curvature without instruction or negotiation.
 
-You don’t decide to lean.  
-The space reshapes around the mass,  
-and your body follows the geometry without thought or negotiation.
+You do not decide to lean.  
+The geometry changes,  
+and the body responds.
 
 True desire works the same way.
 
-It doesn’t shout.  
+It does not shout.  
 It pulls.  
-It draws you toward the version of yourself that requires no performance,  
+It draws you toward a version of yourself that requires no performance,  
 no inflation,  
 no justification.  
 It reorganises your internal landscape  
-the moment you stop resisting.
+the moment resistance loosens.
 
-The body recognises truth long before the mind does:  
+The body recognises alignment before the mind names it:  
 a deeper breath,  
-a jaw released,  
-a chest that opens by a degree.  
-Small signals –  
-but unmistakable.
+a jaw releasing,  
+a chest opening by a degree.  
+Small signals,  
+yet unmistakable.
 
 Your system knows when you are moving toward something that fits.
 
-But not every deep pull is truth.  
-Some desires are distortions –  
-the echo of old pain trying to complete itself through achievement, control, or escape.  
-They feel urgent,  
-but they do not feel right.
+Some deep pulls, however, are distortions –  
+the echo of old pain attempting completion through achievement, control, or escape.  
+They carry urgency,  
+but not coherence.
 
 To tell the difference, interrogate the pull:
 
-**Where did you come from?**  
-**What pain do you soothe?**  
-**Does this make me larger, or does it collapse me inward?**
+**Where did you originate?**  
+**What pain do you attempt to soothe?**  
+**Do you expand my capacity to stand, or do you collapse it inward?**
 
-True desire does not shrink you.  
-It expands the internal space you can stand inside.
+True desire expands the internal space you can inhabit.
 
 It is not fantasy.  
 It is memory –  
-the memory of who you were before you started contorting yourself  
-to fit the world around you.
+the memory of who you were before adaptation required contortion,  
+before you learned to shape yourself around expectation.
 
 You already know what your real desire is.  
-You’ve known for years.  
-You’ve felt it in quiet moments when you stop pretending.  
-You’ve felt it in the clarity that appears when your defences drop.  
-You’ve felt it in the orientation of your body  
-when you allow yourself a moment of honesty.
+You have known for years.  
+It appears in quiet moments when pretense drops away.  
+It appears in the clarity that follows honesty.  
+It appears in the orientation of your body  
+when resistance eases.
 
 This is the shape of your becoming.  
 The curvature beneath the noise.  
 The gravitational well at the centre of your life.
 
-You don’t need to chase it.  
-You need to stop resisting the fall.
+You do not need to chase it.  
+You need to allow the fall.
 
-Once you name it,  
-you will no longer wonder what you want.  
-You will only wonder  
-whether you are willing to move in its direction.
+Once it is named,  
+the question is no longer what you want,  
+but whether you are willing  
+to move in its direction.
