--- a/src/book/Part I: The Axis of Becoming/3. The Weight of Choice.md
+++ b/src/book/Part I: The Axis of Becoming/3. The Weight of Choice.md
@@ -1,97 +1,100 @@
 # **Chapter 3 – The Weight of Choice**
 
 Desire gives you direction, but direction alone does not create movement.  
-You can know exactly where you should go and remain completely still.  
+You can know exactly where you want to go and remain completely still.  
 Clarity without action is a map pinned to the wall – accurate, unused, unchanged.
 
 This is the problem of choice.
 
 Before you act, you live inside two possible futures at once.  
-The future where you change, and the future where you don’t.  
+The future where you change, and the future where you do not.  
 Both feel real.  
-Both hold weight.  
+Both carry weight.  
 Both pull at you in different ways.
 
-This tension is not indecision.  
-It is physics.
+This tension is physics.
 
-A system in a state of potential sits with its energy distributed across possibilities.  
-Nothing collapses into reality until something intervenes.  
-In quantum mechanics, this is superposition – a particle existing across multiple states until the moment of interaction forces it into one.
+A system in a state of potential holds its energy across multiple possibilities.  
+Nothing resolves into reality until something intervenes.  
+In quantum mechanics, this is superposition – a particle distributed across states until interaction forces it into one.
 
-Choice is the interaction.  
-It is the moment the wave collapses and the world gains a direction.
+Choice is that interaction.  
+It is the moment the wave collapses and the world acquires direction.
 
-And this is why choosing feels heavy.  
-You are not deciding between ideas.  
+This is why choosing feels heavy.  
+You are not selecting between ideas.  
 You are collapsing entire futures.  
-One dies so another can live.
+One closes so another can proceed.
 
-People often hesitate not because they lack desire, but because they sense the cost.  
-To choose one path is to sever the others.  
-To step forward is to surrender the comfort of imagining who you could be without the burden of becoming it.
+Hesitation often appears not because desire is missing, but because cost is recognised.  
+To choose one path is to release the others.  
+To step forward is to surrender the comfort of imagining who you could be without the demand of becoming it.
 
 The mind resists this finality.  
-It prefers potential – the illusion of infinite paths, infinite identities, infinite time.  
-But potential is not peace.  
-It is a holding pattern with no oxygen.
+It prefers potential – the illusion of endless paths, endless identities, endless time.  
+But potential offers no rest.  
+It suspends motion without sustaining life.
 
 Ask yourself:
 
 **What am I keeping alive by refusing to choose?**  
-**What version of myself am I protecting from reality?**  
-**What am I afraid will happen if I act?**
+**Which version of myself is being protected from reality?**  
+**What do I believe will happen if I act?**
 
-Choice is a form of self-respect.  
-It declares: *I will no longer inhabit the waiting room of my own life.*
+Choice is an act of self-respect.  
+It declares a willingness to leave the waiting room of your own life.
 
-But choice has a cost, and the cost is energy.
+Choice also carries a cost, and that cost is energy.
 
 In every system, change requires activation energy – the initial force needed to break inertia and establish a new direction.  
-It is the hardest point of the motion.  
-Once momentum builds, the energy required decreases.  
-But the ignition always burns.
+This is the most demanding phase of motion.  
+Once momentum forms, the required energy decreases.  
+The ignition is always the hardest burn.
 
-This is why the first step feels impossible.  
-Strength can be present, and still the physics of transformation remains.
+This is why the first step feels overwhelming.  
+Strength may be present, and still transformation resists.  
+The physics remain.
 
-And yet, the moment you step –  
-the moment you commit to one future over another –  
-the internal pressure shifts.  
-Ambiguity dissolves.  
+And yet, the moment commitment is made –  
+the moment one future is chosen over another –  
+internal pressure redistributes.  
+Ambiguity loosens its grip.  
 The path sharpens beneath your feet.
 
-The body recognises commitment before the mind fully does:  
+The body registers commitment before the mind finishes its argument:  
 the breath steadies,  
 the shoulders lower,  
 the posture aligns by a degree.
 
-A system loves direction.  
-It hates ambiguity.
+Systems respond to direction.  
+They strain under ambiguity.
 
-Choice is the moment you give your life a structure clear enough to reduce friction.
+Choice provides the structure that reduces friction.
 
-And here is the part most people misunderstand:  
-you do not need certainty.  
-You need honesty.  
-Honesty is what allows the system to align.  
-Certainty emerges later – from movement, not thought.
+What matters most here is this:  
+certainty is not required.  
+Honesty is.
 
-So ask yourself the real question beneath all your rationalisations:
+Honesty allows alignment to occur.  
+Certainty follows later, emerging from movement rather than thought.
 
-**What direction becomes undeniable when I stop lying to myself?**
+So ask the question beneath all rationalisation:
+
+**Which direction becomes unavoidable when pretense drops away?**
 
 Move toward that – even by a single step.
 
-Choice is not a grand moment.  
+Choice is rarely dramatic.  
 It is a tilt – a deliberate breach in the pattern.  
-Not enough to transform your life in a single motion,  
-but enough to break the spell of passivity.
+Insufficient to transform a life in one motion,  
+yet sufficient to break the spell of passivity.
 
-Once you choose, the world stops being abstract.  
-The consequences sharpen.  
-The next step becomes visible in a way it never was while you were hovering.
+Once a choice is made, the world loses its abstraction.  
+Consequences sharpen.  
+The next step becomes visible in a way it never was while hovering.
 
-You don’t need momentum.  
-You need a point of no return – a commitment that closes the door behind you  
-so the only direction left is forward.
+Momentum is not the prerequisite.  
+Commitment is.
+
+A point of no return that closes one door  
+so the only remaining direction is forward.
