--- a/src/book/Part I: The Axis of Becoming/6. Integration and the Returning Self.md
+++ b/src/book/Part I: The Axis of Becoming/6. Integration and the Returning Self.md
@@ -9,110 +9,111 @@ You wake up as a reconfigured one.
 
 This is why the old self returns.
 
-Not to undo you.  
-To be integrated.
+It returns to be integrated.
 
-You feel this most acutely when life presses on the same bruise twice.  
-A reaction you thought you had healed flickers awake.  
-A habit you believed buried slips out in a moment of stress.  
+You feel this most clearly when life presses on the same bruise twice.  
+A reaction you believed resolved flickers awake.  
+A habit you thought buried slips out under stress.  
 A version of you, once lived and outgrown, rises like steam from hot stone.
 
-It feels like regression, but that is an illusion.  
-Systems do not regress – they reveal.
+It can feel like regression.  
+Systems behave differently.  
+They reveal what still holds influence.
 
-The returning self is not a step backward.  
+The returning self is not a reversal.  
 It is the next layer of the same work.
 
-The human brain, nature’s most complex structure, shows us this plainly.  
+The human brain, one of nature’s most complex structures, shows this plainly.  
 Neural pathways do not vanish; they weaken.  
-Muscle memory does not disappear; it goes dormant.  
-Emotional patterns do not dissolve; they lose their authority.
+Muscle memory does not disappear; it lies dormant.  
+Emotional patterns do not dissolve; they lose authority.
 
-But under pressure, the old signals fire again.  
-They are not in charge; they were once necessary.
+Under pressure, older signals may fire again.  
+They are no longer in control,  
+but they were once necessary.
 
-A system never deletes its past.  
-It simply stops revolving around it.
+A system does not delete its past.  
+It shifts what it revolves around.
 
-Consider a river that has carved itself through rock over centuries.  
+Consider a river carved through rock over centuries.  
 You redirect the water.  
-You build a new path.  
-You guide it with intention.  
-But when the rains are heavy, the river remembers the channels it once carved and follows them again.
+You guide it into a new channel.  
+But when rainfall is heavy, the flow remembers older paths and briefly returns to them.
 
 Those channels still exist beneath the surface.
 
-The same happens in you.
+The same is true of you.
 
-Your old ways of coping, reacting, protecting, avoiding –  
-these were once survival strategies.  
+Old ways of coping, reacting, protecting, avoiding –  
+these were survival strategies.  
 They formed grooves in your internal landscape.  
-When life rains heavily, the water will try to run there again.
+When pressure increases, energy seeks the familiar route.
 
-Integration is not the erasure of those grooves.  
+Integration is not erasing those grooves.  
 It is learning how to redirect the flow when it returns.
 
-Most people mistake the reappearance of an old pattern for failure.  
-They expect transformation to feel permanent, linear, ascending.  
-But change is not a replacement of the self – it is the expansion of it.
+Many people mistake the reappearance of an old pattern for failure.  
+They expect change to feel permanent, linear, ascending.  
+Change unfolds differently.  
+It expands the self rather than replacing it.
 
-A new behaviour at first competes with the old one.  
+A new behaviour first competes with the old one.  
 Then it coexists.  
 Then it becomes the preferred path.  
-But the old path still exists.
+The old path remains, but it is no longer dominant.
 
-Psychology names this reconsolidation –  
-the updating of old emotional memory with new meaning, new behaviour, new outcomes.  
-But reconsolidation takes repetition.  
-A new self must be lived into the bones before it becomes the default.
+Psychology calls this reconsolidation –  
+the updating of emotional memory with new meaning, new behaviour, new outcomes.  
+Reconsolidation requires repetition.  
+A new configuration must be lived into the body before it stabilises.
 
 When an old pattern resurfaces, it is not a collapse.  
-It is a reminder:
+It is a signal:
 
-**this part hasn’t been integrated yet.**
+**this part has not yet been integrated.**
 
-And integration is not victory.  
+Integration is not victory.  
 It is relationship.
 
-You do not fight the old self.  
+You do not battle the old self.  
 You make room for it.  
-You understand what it protects, what it fears, what it once did for you.  
-You listen to it without obeying it.
+You understand what it protects, what it fears, what it once made possible.  
+You listen without surrendering authority.
 
-Integration is the art of standing in your present self while honouring your past one.
+Integration is the ability to stand in your present self while recognising your past one.
 
 Not to return to it.  
 Not to shame it.  
-But to recognise that who you were is the raw material of who you are becoming.
+But to acknowledge that who you were is the raw material of who you are becoming.
 
-This is why the returning self is essential.  
-Without it, you would never know what still needs to be healed, softened, rerouted, or rewritten.  
-You would mistake avoidance for progress.  
-You would confuse suppression with stability.
+This is why the returning self matters.  
+Without it, you would not know what still needs attention, redirection, or care.  
+Avoidance could be mistaken for progress.  
+Suppression could look like stability.
 
-The return is data.  
+The return is information.  
 The return is invitation.  
 The return is the next doorway.
 
-And the moment you stop panicking at its arrival, you discover something quiet and liberating:
+When panic no longer greets its arrival, something quiet becomes possible:
 
-The old self can visit  
-but it no longer gets to drive.
+the old self can visit  
+without taking the wheel.
 
-Integration is not the disappearance of the past;  
-it is the redistribution of its authority.
+Integration is not the disappearance of the past.  
+It is the redistribution of authority.
 
 When you can say:  
-**“I know this part of me – I understand why it’s here, and I choose differently now,”**  
+**“I recognise this part of me. I understand why it is here, and I choose differently now,”**  
 the work has landed.
 
 You have not become someone else.  
-You have become someone capable of holding more of yourself without breaking.
+You have become someone capable of holding more of yourself without fracture.
 
 This is integration.  
 A widening.  
 A deepening.  
-A settling into a self that can now contain its past, its present, and its possible future without collapsing.
+A settling into a self that can contain its past, its present, and its possible future at once.
 
 The old self returns so the new self can answer.
 
