--- a/src/book/Part II: The Spiral Path/10. Shedding Mass.md
+++ b/src/book/Part II: The Spiral Path/10. Shedding Mass.md
@@ -2,13 +2,13 @@
 
 Every object with mass is attracted to every other.
 
-The most fundamental of these forces is gravity – the curvature of the very substrate of existence.  
+At the most fundamental level, this attraction is gravity – the curvature of the substrate of existence itself.  
 Matter bends space.  
 Space directs motion.
 
 Nothing moves in isolation.
 
-At the multidimensional level of relationships, this attraction takes many forms.  
+In the multidimensional field of relationships, attraction takes many forms.  
 Attention.  
 Attachment.  
 Expectation.  
@@ -19,16 +19,16 @@ They regulate energy, preserve coherence, and allow systems to endure.
 
 Others are fractious.  
 Chaotic.  
-They demand constant correction, constant effort, constant vigilance.
+They demand constant correction, vigilance, and effort.
 
-These orbits do not fail all at once.  
+These orbits rarely fail all at once.  
 They tighten.  
 They distort movement.  
 They drain the system until collapse becomes inevitable.
 
 There are only a few ways an orbit changes.
 
-Most people try the first one.
+Most people attempt the first.
 
 They add speed.
 
@@ -37,141 +37,143 @@ They argue their way out.
 They prove their way out.  
 They accelerate.
 
-In physics, this is called escape velocity – the energy required to overcome gravitational pull.
+In physics, this is escape velocity – the energy required to overcome gravitational pull.
 
-In life, it looks like conflict.
+In life, it appears as conflict.
 
 The cost is high.  
-You burn fuel.  
-You leave damage.  
-Sometimes you break free, but you are exhausted by the attempt.
+Fuel burns quickly.  
+Damage accumulates.  
+Sometimes freedom is achieved, but exhaustion arrives with it.
 
-So people try the second way.
+So people attempt the second way.
 
 They slow down.
 
 They stop pushing.  
 They withdraw.  
 They numb.  
-They collapse inward.
+They fold inward.
 
-In physics, this is orbital decay – the loss of motion until gravity wins and the body falls inward.
+In physics, this is orbital decay – the loss of motion until gravity pulls the body inward.
 
-In life, it looks like resignation.
+In life, it resembles resignation.
 
-You stay, but smaller.  
-You survive, but compressed.  
+Presence remains, but compressed.  
+Survival continues, but diminished.  
 The orbit tightens until identity erodes.
 
-No orbit can be exited while the system insists on carrying the very weight that keeps it bound.
+No orbit changes while the system continues to carry the weight that binds it.
 
-Both of these approaches rely on force.
+Both approaches rely on force.
 
-One spends it.  
-The other loses it.
+One expends it.  
+The other relinquishes it.
 
-Almost no one considers the third option.
+A third option exists.
 
-You do not change speed.  
-You do not collapse.
+Speed remains.  
+Collapse does not occur.
 
-You become lighter.
+Mass is reduced.
 
 In physics, gravity acts on mass.  
-Reduce the mass and the same gravitational field loses its grip.
+When mass decreases, the same gravitational field exerts less hold.
 
-The pull has not changed.  
-You have.
+The field is unchanged.  
+The object is not.
 
-In human terms, mass is not your body.  
-It is what you are carrying.
+In human terms, mass is what you carry.
 
-Your ego.  
-Your grievance.  
-Your need to be right.  
-Your attachment to outcome.  
-The story you keep alive long after it has stopped serving you.
+Ego.  
+Grievance.  
+The need to be right.  
+Attachment to outcome.  
+Stories kept alive long after they have ceased to serve.
 
 This is the weight.
 
-As long as you remain heavy with significance, gravity holds you.
+As long as significance is reinforced, gravity retains its grip.
 
-This is why insight alone does not free you.  
-You can understand the pattern perfectly and still remain bound.
+This is why insight alone rarely frees anyone.  
+Patterns can be understood precisely while remaining intact.
 
-Understanding does not reduce mass.  
-Letting go does.
+Understanding maps the structure.  
+Release alters the mass.
 
-Lightness does not mean stopping.
+Lightness does not imply stopping.
 
-An orbit only breaks if velocity is preserved.
+An orbit only breaks if motion is preserved.
 
-If you shed mass but lose motion, you fall inward.  
-If you maintain motion but remain heavy, you keep circling.
+Shed mass without motion and the system falls inward.  
+Maintain motion while remaining heavy and the system continues to circle.
 
 Freedom requires both.
 
-Letting go costs energy – but it is not the same energy as force.  
+Letting go consumes energy, though not the kind spent through force.  
 It is internal.  
 Quiet.  
-Continuous.
+Sustained.
 
-In physics, this process already exists.
+Physics already contains this process.
 
 It is called decay.
 
 Unstable structures do not fight to remain intact.  
-They release what they cannot hold.  
-They shed excess energy and settle into configurations that require less effort to maintain.
+They release what cannot be held.  
+Excess energy dissipates.  
+The system settles into a configuration requiring less effort to maintain.
 
-Nothing is attacking.  
-Nothing is collapsing.  
-The system is becoming honest about what no longer belongs.
+Nothing attacks.  
+Nothing collapses.  
+The structure becomes honest about what no longer belongs.
 
 The universe prefers efficiency.
 
-What looks like effort from the outside is often relief from within.
+What appears as effort externally is often relief internally.
 
-Shedding mass works the same way.
+Shedding mass follows the same logic.
 
-You continue moving.  
-You keep your direction.  
-You maintain your velocity.
+Motion continues.  
+Direction remains.  
+Velocity is preserved.
 
-But you stop reinforcing what makes you dense.
+What changes is what is no longer reinforced.
 
-You stop rehearsing the argument.  
-You stop feeding the resentment.  
-You stop carrying armour that once protected you but now weighs you down.
+Arguments are no longer rehearsed.  
+Resentments are no longer fed.  
+Armour that once protected but now burdens is set down.
 
-Nothing dramatic happens.
+Nothing dramatic occurs.
 
-The relationship does not explode.  
+The relationship does not rupture.  
 The situation does not resolve.  
-The field is unchanged.
+The field remains the same.
 
-But the grip loosens.
+Yet the grip loosens.
 
-You notice you can hear without defending.  
-You can move without reacting.  
-You can stay without bracing.
+Hearing occurs without defence.  
+Movement occurs without reaction.  
+Presence occurs without bracing.
 
-The orbit begins to widen on its own.
+The orbit widens on its own.
 
 Shedding mass does not dictate outcome.
 
-A lighter object may leave an orbit entirely.  
+A lighter object may exit an orbit entirely.  
 Or it may settle into one that is stable, sustainable, and no longer costly.
 
-The difference is not where you end up,  
-but how much effort it takes to remain there.
+The difference lies elsewhere.
+
+Not in where you end up,  
+but in the effort required to remain there.
 
 This was never about leaving or staying.
 
-It was about balance.
+It was about load.
 
-The middle of all things is not a fixed point.  
-It is a living one.
+The middle of all things is not fixed.  
+It is living.
 
-To shed mass is not to reject gravity,  
-but to move within it without being owned by it.
+To shed mass is to move within gravity  
+without being owned by it.
