--- a/src/book/Part II: The Spiral Path/7. The Spiral Path.md
+++ b/src/book/Part II: The Spiral Path/7. The Spiral Path.md
@@ -3,28 +3,30 @@
 You don’t fail by returning.  
 You fail by returning unchanged.
 
-Most people expect growth to feel like distance – the further they get from who they were, the better they assume they must be doing.  
-But real change doesn’t move away from the past.  
+Most people expect growth to feel like distance – the further they move from who they were, the more progress they assume they are making.  
+Real change behaves differently.  
+It does not move away from the past.  
 It moves around it.
 
-You come back to the same moments, the same pressures, the same internal edges – but you meet them with slightly more room in your chest, slightly more control in your breath, slightly less urgency to react.
+You come back to the same moments, the same pressures, the same internal edges –  
+but you meet them with slightly more room in your chest, slightly more control in your breath, slightly less urgency to react.
 
 That difference is the work.
 
 Watch what happens when you run.
 
-The first mile is always the same.  
+The first mile always arrives the same way.  
 The breath catches.  
 The legs feel heavy.  
 The body resists the demand to settle into motion.
 
 You’ve run before.  
-You know this feeling.  
+You recognise the sensation.  
 And still, it returns.
 
-The mistake is thinking the first mile is the test.
+The mistake is treating the first mile as the test.
 
-The work happens in the second and third.  
+The work unfolds in the second and third.  
 The pace steadies.  
 The breath lengthens.  
 The body remembers how to move without argument.
@@ -33,68 +35,68 @@ Each time you run, you pass through the same threshold.
 The same discomfort.  
 The same negotiation.
 
-But something changes.
+But something shifts.
 
-The tension arrives sooner, but it leaves faster.  
-The stride finds its rhythm without instruction.  
+The tension arrives sooner and leaves faster.  
+The stride finds rhythm without instruction.  
 The body adjusts before the mind has time to complain.
 
 You are not running farther.  
 You are running cleaner.
 
-The route hasn’t changed.  
-The effort hasn’t disappeared.  
-What’s different is your relationship to the edge.
+The route remains the same.  
+The effort remains.  
+What changes is your relationship to the edge.
 
 This is the spiral.
 
-You return to the same resistance,  
-but with a body that knows how to stay.
+You return to the same resistance  
+with a body that knows how to stay.
 
-Now consider how relationships evolve.
+The same mechanics appear in relationships.
 
-The same disagreement appears again.  
-The same trigger surfaces.  
-The same words land with familiar weight.
+A familiar disagreement surfaces.  
+The same trigger appears.  
+The same words land with known weight.
 
-But this time you don’t escalate.  
-You don’t collapse either.  
-You stay.
+This time, escalation does not follow.  
+Collapse does not either.  
+You remain present.
 
 You notice the urge to defend.  
-You feel it crest – and pass.  
-The conversation ends without resolution, but also without damage.
+You feel it crest, then pass.  
+The conversation ends without resolution,  
+and without damage.
 
 Something subtle has shifted.
 
-The pattern didn’t disappear.  
-Your position within it changed.
+The pattern remains.  
+Your position within it has changed.
 
-This is why growth feels unfinished.  
-Because it is.
-
-The spiral doesn’t offer relief.  
+This is why growth rarely feels complete.  
+The spiral does not offer relief.  
 It offers refinement.
 
-What changes is not the terrain, but your capacity to move through it without losing coherence.
+What changes is not the terrain,  
+but your capacity to move through it without losing coherence.
 
-This is how mastery looks from the inside.
+This is how mastery feels from the inside.
 
 Less drama.  
 Less urgency.  
 More margin.
 
-The return is not an error in the system.  
-It *is* the system, training itself under real conditions.
+The return is not an error.  
+It is the system learning under real conditions.
 
 You are not meant to outrun your patterns.  
-You are meant to meet them with enough awareness that they loosen their grip.
+You are meant to meet them with enough awareness that their grip loosens.
 
-Eventually, the loop widens.  
+Over time, the loop widens.  
 The pull weakens.  
-The pattern stops asking for your attention.
+The pattern stops demanding your attention.
 
-Not because you defeated it –  
+Not because it was defeated –  
 but because you learned how to stand inside it without being pulled apart.
 
 That is the spiral path.
