--- a/src/book/Part II: The Spiral Path/8. Rest, Oscillation, and the Zero Point.md
+++ b/src/book/Part II: The Spiral Path/8. Rest, Oscillation, and the Zero Point.md
@@ -2,20 +2,19 @@
 
 Nothing that moves can move forever.
 
-Every system that sustains itself does so by oscillating.  
+Every system that sustains itself does so through oscillation.  
 Expansion and contraction.  
 Effort and release.  
 Signal and silence.
 
-Rest is not the absence of movement.  
-It is the counter-movement that keeps motion possible.
+Rest is the counter-movement that keeps motion possible.
 
-The duality of existence is the music life dances to.
+The duality of existence is the music life moves to.
 
-At the most fundamental level, reality is vibration.  
-What we call matter is not solid substance, but energy organised into stable patterns of oscillation.  
+At the most fundamental level, reality vibrates.  
+What we call matter is energy organised into stable patterns of oscillation.  
 Particles are excitations in fields.  
-Form persists only because opposing forces remain in balance.
+Form persists because opposing forces remain balanced.
 
 Even stillness is dynamic.
 
@@ -28,13 +27,13 @@ There is a simple way to see this.
 
 Spin a coin on a table.
 
-At rest, it is nothing more than a flat disc – a two-dimensional object lying obediently against the surface.  
+At rest, it lies flat – a two-dimensional object pressed against the surface.  
 Defined.  
 Passive.
 
-Now introduce energy into the system.
+Introduce energy into the system.
 
-As the coin spins, something remarkable happens.  
+As the coin spins, something changes.  
 The flat disc no longer appears flat.  
 Its edges blur.  
 It lifts from the surface.  
@@ -42,83 +41,84 @@ A circle becomes a sphere.
 
 Dimensionality emerges from motion.
 
-Touch it and you feel resistance.  
-The spinning coin repels your finger.  
-Not symbolically – physically.  
-The field of motion pushes back.  
-Energy expresses itself as solidity.
+Touch it and resistance appears.  
+The spinning coin pushes back.  
+Not metaphorically – physically.  
+The field of motion expresses itself as solidity.
 
-What was motion becomes mass.  
-What was vibration becomes ground.
+Vibration becomes mass.  
+Motion becomes ground.
 
-This is how the world holds together.
+This is how structure holds.
 
-The earth beneath your feet feels solid not because it is still,  
-but because its motion is balanced, coherent, and continuous.
+The earth beneath your feet feels solid because its motion is balanced, coherent, and continuous.
 
-As the spin slows, the illusion collapses.  
-The field weakens.  
-The wobble appears.  
-The dimensions fall back into one another.  
-Eventually, motion can no longer sustain form, and the coin lies flat once more.
+As the spin slows, the field weakens.  
+The wobble emerges.  
+Dimensions fold back into one another.  
+Eventually, motion can no longer sustain form, and the coin settles.
 
-What you thought was stillness was never stillness at all.  
-It was sustained oscillation holding shape in place.
+What looked like stillness was sustained oscillation holding shape in place.
 
-This is the zero point revealed.
+This is the zero point made visible.
 
-You see the same structure in the body.
+The same structure appears in the body.
 
-A muscle does not generate force by remaining tense.  
-It contracts, then releases.  
-Power lives in the rhythm between the two.  
-Hold the contraction too long and the system fails – not from weakness, but from lack of recovery.
+A muscle generates force through rhythm.  
+Contraction followed by release.  
+Power lives between the two.  
+Hold contraction too long and failure follows – not from weakness, but from exhaustion.
 
-Breath follows the same law.  
+Breath obeys the same law.  
 Inhale.  
-Exhale.  
-But the most revealing moment is neither.
+Exhale.
 
+The most revealing moment is neither.  
 It is the brief stillness at the end of the out-breath.  
-The pause where nothing is being done.  
-The system resets itself there, not in the effort.
+The pause where nothing is done.  
+The system resets there.
 
-Music knows this too.  
-Sound exists because silence allows it to shape itself.  
-Remove the space between notes and meaning collapses into noise.
+Music follows the same architecture.  
+Sound takes shape because silence gives it edge.  
+Remove the space between notes and meaning dissolves into noise.
 
-Night follows day.  
-Sleep follows waking.  
+Day yields to night.  
+Waking yields to sleep.  
 On and off.  
 Zero and one.
 
 Information itself depends on alternation.
 
-Rest is not a break in the pattern.  
-It *is* the pattern.
+Rest is not outside the pattern.  
+It is the pattern.
 
-This is where most people go wrong.  
-They treat rest as indulgence, escape, or reward.  
+This is where systems begin to fail.
+
+Rest is treated as indulgence, delay, or reward.  
 Something earned.  
 Something postponed.
 
-But rest is structural.
+But oscillation is structural.
 
-Without oscillation, systems overheat.  
+Without release, systems overheat.  
 Without pause, signals degrade.  
 Without stillness, motion loses coherence.
 
-Systems that never release tension do not usually break all at once.  
-They lose signal first.  
-Sensitivity dulls, feedback fades, and collapse arrives quietly, long after the system stopped responding.
+Systems rarely collapse all at once.  
+They lose sensitivity first.  
+Feedback dulls.  
+Signal fades.  
+Failure arrives quietly, long after responsiveness is gone.
 
-What looks like discipline becomes compulsion.  
-What feels like momentum becomes drift.
+What once looked like discipline becomes compulsion.  
+What felt like momentum becomes drift.
 
-Rest restores the signal.
+Rest restores signal.
 
-It allows tension to discharge, excess effort to fall away, direction to recalibrate without force.  
-Not by adding energy, but by removing resistance.
+Tension discharges.  
+Excess effort falls away.  
+Direction recalibrates without force.  
+Not by adding energy, but by allowing resistance to dissolve.
 
 The zero point is not an ending.  
 It is a hinge.
@@ -127,20 +127,18 @@ A moment where opposing forces cancel just long enough for orientation to return
 Where motion can change direction without breaking.  
 Where effort can resume without strain.
 
-Rest is not stopping.
+Rest is how movement stays true.
 
-It is how movement stays true.
+When rhythm is honoured –  
+when action is followed by release,  
+sound by silence,  
+motion by settling –
 
-And when you learn to honour this rhythm –  
-to act, then release,  
-to sound, then fall silent,  
-to move, then settle –
-
-you stop fighting the very structure that keeps you alive.
+the system stops fighting its own architecture.
 
 The spiral loosens.  
 The path steadies.
 
 Motion continues.
 
-But now, it breathes.
+And now, it breathes.
