--- a/src/book/Part II: The Spiral Path/9. Other People, Other Gravities.md
+++ b/src/book/Part II: The Spiral Path/9. Other People, Other Gravities.md
@@ -5,31 +5,31 @@ You do not move through life alone.
 Every person you encounter carries mass – history, emotion, belief, fear, desire.  
 And mass bends space.
 
-You feel this the moment another person enters your life with enough force.  
-Your attention shifts.  
-Your routines rearrange.  
-Your decisions curve.
+You feel this the moment another person enters your life with sufficient force.  
+Attention shifts.  
+Routines rearrange.  
+Decisions begin to curve.
 
-Gravity is real.
+Gravity asserts itself.
 
-This is the mistake most philosophies make.  
-They speak as if the self moves through an empty universe.  
-As if intention alone determines trajectory.
+Many philosophies miss this.  
+They speak as though the self moves through empty space,  
+as though intention alone determines trajectory.
 
-But intention is only half the equation.
+But intention is only part of the equation.
 
 Other people exert pull.
 
-In physics, when two bodies come close, their paths are no longer straight.  
-They curve toward one another.  
+In physics, when two bodies approach one another, their paths cease to be straight.  
+They curve.  
 Sometimes they settle into orbit.  
 Sometimes they collide.  
-Sometimes one body is flung outward, altered forever by the encounter.
+Sometimes one body is slingshot outward, altered permanently by the encounter.
 
 The smaller body does not choose this.  
-The force acts regardless of desire.
+The force acts regardless of preference.
 
-The same is true here.
+The same mechanics operate here.
 
 A parent.  
 A lover.  
@@ -37,81 +37,85 @@ A child.
 A leader.  
 A crowd.
 
-You feel their gravity before you understand it.  
-Your behaviour shifts subtly at first.  
-You speak differently.  
-You hesitate where you once moved cleanly.  
-You accelerate in directions that no longer feel like your own.
+Their gravity is felt before it is understood.  
+Speech shifts.  
+Movement hesitates.  
+Momentum redirects toward paths that no longer feel self-generated.
 
 This is interaction.
 
-The danger is not being pulled.  
-The danger is forgetting that you still rotate around your own axis.
+Being pulled is not the problem.  
+Losing orientation is.
 
-In orbit, a body’s path is determined by gravity.  
-But its experience is determined by rotation.
+In orbit, a body’s path is governed by gravity.  
+Its experience, however, is governed by rotation.
 
-Even when pulled completely off course, the body retains its centre of mass.  
+Even when deflected, a body retains its centre of mass.  
 It spins.  
-It has orientation.  
+It maintains orientation.  
 It has an inside.
 
 So do you.
 
-Most people confuse influence with erasure.  
-They believe that if they are affected, they have failed to remain themselves.
+Influence is often mistaken for erasure.  
+People assume that being affected means losing themselves.
 
-But influence is inevitable.  
-Integrity is not about resisting gravity.  
-It is about maintaining orientation within it.
+But influence is unavoidable.  
+Integrity lives elsewhere.
+
+Integrity is the capacity to remain oriented while under force.
 
 This is why relationships distort time.
 
 Moments stretch.  
-Words land heavier than they should.  
+Words land with disproportionate weight.  
 Silence becomes charged.
 
 You are no longer moving through neutral space.  
 You are moving through a field.
 
-And fields change behaviour.
+Fields alter behaviour.
 
-You may find yourself circling the same arguments.  
-Revisiting the same emotional terrain.  
-Repeating patterns you believed you had outgrown.
+You may circle the same arguments.  
+Return to familiar emotional terrain.  
+Revisit patterns you believed had loosened their hold.
 
-The spiral returns here because the field has changed.
+The spiral reappears here because the field has changed.
 
-The spiral returns here, but now it is shared.
+It returns as a shared structure.
 
 Two systems interacting.  
 Two histories overlapping.  
-Two centres of gravity negotiating space.
+Two centres negotiating space.
 
-This is why proximity matters more than intention.  
-Why living with someone reshapes you more than thinking about them ever could.  
+This is why proximity reshapes more deeply than intention.  
+Why living with someone alters you more than thinking about them ever could.  
 Why crowds amplify fear and courage alike.
 
-You are not just an individual system.  
-You are a system within systems.
+You are not a solitary system.  
+You are a system nested within others.
 
-The question is no longer *Who am I when I stand alone?*  
-It is *Who am I when I am being pulled?*
+The question shifts.
 
-The answer is not found in withdrawal.  
-Nor in collapse.
+Who are you when standing alone  
+becomes  
+who are you when being pulled?
 
-It is found in awareness.
+The answer does not arrive through withdrawal.  
+It does not arrive through collapse.
 
-To live well among others is to recognise gravity without surrendering your axis.  
+It arrives through awareness.
+
+To live among others is to recognise gravity without surrendering your axis.  
 To allow curvature without losing rotation.  
 To be moved without being removed.
 
 You will be pulled.  
-That is unavoidable.
+That is inevitable.
 
-What matters is whether you remember where your centre is while it happens.
+What matters is whether you remember where your centre is  
+while it happens.
 
-The world does not ask you to be untouched.
+The world does not require you to be untouched.
 
-It asks you to remain oriented.
+It requires you to remain oriented.
