--- a/src/book/Part III: The Living Axis/11. Time and the Myth of Readiness.md
+++ b/src/book/Part III: The Living Axis/11. Time and the Myth of Readiness.md
@@ -4,93 +4,100 @@ You keep waiting.
 
 For more clarity.  
 For more confidence.  
-For a moment where the variables settle and the decision presents itself cleanly.
+For a moment when the variables settle and the decision presents itself cleanly.
 
 You tell yourself you are not ready.  
-That it would be reckless to move too soon.  
-That a little more time will resolve the tension.
+That moving too soon would be reckless.  
+That time will soften the tension.
 
 But time does not resolve systems.  
-It exposes them.
+It reveals them.
 
-In physics, time is not a gatekeeper or a permission slip.  
-It is the dimension through which change unfolds *once motion begins*.  
+In physics, time is not a gatekeeper.  
+It is the dimension through which change unfolds once motion exists.  
 Nothing becomes ready by remaining still.
 
 Readiness is not a state you enter.  
 It is a property that emerges through movement.
 
-What often hides beneath the language of preparation is fear.  
-Not fear of failure, but fear of irreversibility.  
-Fear that once you move, you will not be able to return to who you were before.
+Beneath the language of preparation, something else usually operates.  
+A resistance to irreversibility.  
+A reluctance to cross a threshold that cannot be uncrossed.
 
-So you rehearse the future in your mind.  
-You refine it.  
-Optimise it.  
-Simulate it endlessly.
+Movement closes doors.
 
-But simulation does not change the system.
+Once you act, the imagined futures collapse into one lived path.  
+The safety of possibility disappears.  
+The burden of becoming replaces the comfort of rehearsal.
 
-Evolution does not wait for readiness.  
-No organism emerges fully adapted to the environment it will face.  
+So the future is refined internally.  
+Simulated.  
+Optimised.  
+Revisited from every angle.
+
+But simulation does not alter the system.
+
+Evolution offers a clear parallel.
+
+No organism emerges adapted to the environment it will face.  
 Variation appears first.  
 Selection follows.
 
 Life moves, then adjusts.
 
-Growth works the same way.
+Growth follows the same architecture.
 
-Muscle does not become strong before it is loaded.  
-Bone does not densify before impact.  
-Neural pathways do not refine before use.
+Muscle strengthens through load.  
+Bone densifies through impact.  
+Neural pathways refine through use.
 
-Stress arrives first.  
-Adaptation follows.
+Stress precedes adaptation.  
+Alignment follows action.
 
-In real systems, change happens when accumulated alignment exceeds inertia.  
+In real systems, change occurs when accumulated alignment exceeds inertia.  
 Not when certainty arrives.
 
-Waiting does not prepare you.  
-It conditions you to wait more effectively.
+Waiting trains the system in a particular way.
 
-Your body learns that insight leads to pause.  
+The body learns that insight leads to pause.  
 That intuition ends in delay.  
-That clarity is something to be analysed rather than acted upon.
+That clarity is something to analyse rather than enact.
 
-Over time, even motivation arrives cautiously,  
+Over time, even motivation hesitates,  
+arriving tentatively,  
 as if it expects not to be trusted.
 
-The truth is simpler, and harder.
+The pattern stabilises.
 
-You will never feel fully ready.
+Readiness never fully arrives because it is not designed to.
 
-That is not a flaw.  
-It is the nature of thresholds.
+Thresholds require friction.  
+If there were no resistance, the crossing would already have happened.
 
-A threshold cannot be crossed without friction.  
-If there were no resistance, you would already be on the other side.
+Stability emerges while moving.  
+Direction sharpens through correction.  
+Balance forms through response, not foresight.
 
-You stabilise while moving.  
-Not before.
+Each action produces feedback.  
+Each adjustment recalibrates orientation.  
+The system updates itself through contact with reality.
 
-Each step produces feedback.  
-Each adjustment sharpens direction.  
-Balance emerges through correction, not foresight.
+Delay does something else.
 
-Every time you act, even imperfectly, the system updates.  
-Every time you delay, you reinforce the association between awareness and inaction.
+It reinforces the link between awareness and inaction.  
+It teaches the system that knowing is enough.
 
 Time does not hold your becoming.
 
-You do.
+It only measures it.
 
-The question is not whether you are ready.
+The question is not whether readiness will arrive.
 
 It is whether you are willing to move without guarantees,  
-to trust that coherence forms through motion,  
-and that alignment is something you *build*, not discover.
+to allow coherence to form through motion,  
+to build alignment rather than wait for it to appear.
 
 You are not waiting for the right moment.
 
 You are becoming it  
-the moment you stop waiting.
+the moment movement begins.
