--- a/src/book/Part III: The Living Axis/12. Falling and Rising Again.md
+++ b/src/book/Part III: The Living Axis/12. Falling and Rising Again.md
@@ -5,18 +5,17 @@ You will fall.
 This is not a warning.  
 It is a property of movement.
 
-Once a system begins to move, it will overshoot, undershoot, lose balance, and correct.  
-Perfect trajectories only exist in perfect environments – a state of impossibility.  
-At best, they appear as fleeting moments of stability, dissolving as soon as they are named.
+Once a system begins to move, it overshoots, undershoots, loses balance, and corrects.  
+Perfect trajectories exist only in perfect environments, and those do not exist.  
+At best, stability appears briefly before dissolving under new conditions.
 
-In life, we call falling failure.  
-In reality, it is feedback.
+In life, falling is labelled failure.  
+Structurally, it is feedback.
 
-Growth does not move in straight lines.  
-It moves in spirals – returning, revisiting, re-encountering the same terrain from slightly altered positions.
+Growth does not trace straight lines.  
+It follows spirals – returning, revisiting, re-encountering the same terrain from slightly altered positions.
 
-You do not come back because you failed.  
-You come back because the system is still learning.
+You return because the system is still learning.
 
 A fall does not erase progress.  
 It reveals the limits of the current configuration.
@@ -24,103 +23,101 @@ It reveals the limits of the current configuration.
 In physical systems, stability is tested through perturbation.  
 A force is applied.  
 The system shifts.  
-What matters is not whether it moved, but whether it can recover without disintegrating.
+What matters is not whether movement occurred, but whether recovery is possible without disintegration.
 
-Resilience is not rigidity.  
-It is recoverability.
+Resilience describes this capacity.
 
-The mechanics of walking reveal this quietly. Once greeted with a chorus of congratulations at the first step, they now unfold almost automatically, like breathing or sleep.
+It is the ability to recover while remaining intact.
+
+Walking makes this visible.
 
 To walk is to fall forward and catch yourself.  
-Each step is a controlled loss of balance, followed by a rapid correction.  
-You are never truly stable.  
-You are continually preventing collapse.
+Each step is a controlled loss of balance followed by rapid correction.  
+Stability is never held.  
+It is continuously re-established.
 
-If you tried to remain perfectly upright, perfectly balanced, you would stop moving.  
-If you leaned too far without recovery, you would fall.
+If balance were perfect and static, motion would stop.  
+If correction failed, collapse would follow.
 
-Movement happens in the narrow band between the two.
+Movement exists in the narrow band between these two conditions.
 
-Even standing still is not stillness.  
-It requires constant micro-adjustments in muscle and nerve, a coordination so subtle that even our most advanced machines struggle to replicate it.
+Even standing requires activity.  
+Muscles and nerves perform constant micro-adjustments, a coordination so subtle that even advanced machines struggle to reproduce it.
 
 Balance is not a position.  
-It is an active process.
+It is an ongoing process.
 
-At first, falling feels like regression.  
-Like proof that the work did not hold.  
-Like evidence that you were mistaken about your own growth.
+Early in growth, falling feels like regression.  
+Like evidence that the work failed to hold.  
+Like proof that previous understanding was mistaken.
 
-But this assumes growth is something you achieve and keep.  
-Growth is something you maintain through adjustment.
+This interpretation assumes growth is something achieved and preserved.  
+In practice, growth is something maintained through adjustment.
 
 Each fall exposes where weight remains.  
-Where mass was never fully shed.  
-Where old habits, identities, or protections still carry charge.
+Where mass was not fully released.  
+Where habits, identities, or protections still carry charge.
 
-A fall is information.
+A fall supplies information.
 
-In learning systems, error is not noise – it is signal.  
+In learning systems, error functions as signal.  
 Without it, refinement stalls.  
-Without disturbance, there is no adaptation.
+Without disturbance, adaptation cannot occur.
 
-The problem is not falling.  
-The problem is what you tell yourself when you do.
+What matters is how the fall is interpreted.
 
-If you interpret the fall as failure, you tighten.  
-You brace.  
-You add armour.
+If it is taken as failure, the system tightens.  
+Bracing increases.  
+Armour is added.
 
-The system becomes heavier.
+Weight increases.
 
-If you interpret the fall as data, you soften.  
-You adjust.  
-You release what no longer fits.
+If it is taken as data, the system softens.  
+Adjustment becomes possible.  
+What no longer fits is released.
 
-The system becomes more responsive.
+Responsiveness increases.
 
-Rising again does not mean returning to where you were.  
-It means returning with less resistance.
+Rising again does not mean returning to the previous state.  
+It means re-entering motion with less resistance.
 
-Sometimes rising looks dramatic.  
-Sometimes it looks ordinary.  
-Sometimes it looks like staying with discomfort without needing to resolve it.
+Sometimes this shift is visible.  
+Sometimes it is quiet.  
+Sometimes it looks like remaining with discomfort without needing to resolve it.
 
 There is no heroic rhythm here.
 
-Only honesty.
+Only accuracy.
 
 The spiral does not offer completion.  
 It offers refinement.
 
-Each return widens the arc slightly.  
-Each correction costs a little less.  
-Each fall teaches the system how to recover with more grace.
+Each return widens the arc.  
+Each correction costs less.  
+Each fall teaches the system how to recover with greater coherence.
 
 This is why endurance matters more than perfection.
 
-A system that can fall and recover will outlast one that never allows itself to move.
+A system capable of falling and recovering will outlast one that never allows itself to move.
 
 You are not falling back.
 
 You are falling through –  
-through layers of assumption,  
+through assumptions,  
 through identities that no longer fit,  
-through versions of yourself that were necessary once, but not now.
+through versions of yourself that once served a purpose.
 
-Every fall returns you to the middle.
+Each fall returns you to the middle.
 
-Not as punishment,  
-but as recalibration.
+As recalibration.
 
-The middle is the only place where correction is possible.
+The middle is where correction is possible.
 
-So fall.  
-Adjust.  
-Rise.
+So the system falls.  
+It adjusts.  
+It rises.
 
-Not because you failed,  
-but because you are still moving.
+Because it is still moving.
 
 And movement, by its nature,  
-requires room to recover.
+requires the capacity to recover.
