--- a/src/book/Part III: The Living Axis/13. Acting Without Guarantees.md
+++ b/src/book/Part III: The Living Axis/13. Acting Without Guarantees.md
@@ -2,137 +2,141 @@
 
 At some point, certainty leaves the room.
 
-Not dramatically.  
-Not all at once.  
-It simply stops arriving.
+It does not announce itself.  
+It does not arrive all at once.  
+It simply stops appearing.
 
-You realise there is no final piece of information coming to save the decision.  
-No guarantee waiting just beyond the next thought.  
-No version of the future that can be known well enough to remove risk.
+You notice that no final piece of information is coming to complete the decision.  
+No guarantee waits beyond the next thought.  
+No future can be known well enough to remove risk.
 
 This is not a failure of planning.  
 It is the condition of reality.
 
-At the most fundamental layer we know – beneath matter, beneath form – the universe itself does not operate on certainty.
+At the most fundamental layer we know – beneath matter and form – the universe itself does not operate on certainty.
 
-Quantum mechanics, the framework that governs particles and fields, does not describe what *will* happen.  
-It describes what *may* happen, and with what likelihood.
+Quantum mechanics does not describe what will happen.  
+It describes what may happen, and with what likelihood.
 
-There are no definite paths.  
-Only probability distributions.  
-No precise moments.  
-Only ranges.
+Paths are not fixed.  
+Moments are not precise.  
+Outcomes exist as ranges.
 
-Reality, at its base, unfolds statistically.
+Reality unfolds statistically.
 
-This is how the system works.
+This is not a limitation of knowledge.  
+It is how the system functions.
 
-Even with perfect information, outcomes remain uncertain.  
+Even with perfect information, outcomes remain unresolved.  
 The future is not hidden.  
-It is unresolved.
+It is undecided.
 
-And yet, everything still moves.
+And still, everything moves.
 
-Particles do not wait for guarantees before interacting.  
-Atoms do not hesitate until probabilities collapse into certainty.  
-The universe proceeds by participation, not prediction.
+Particles interact without guarantees.  
+Atoms bind without foresight.  
+The universe proceeds through participation, not prediction.
 
-Life follows the same rule.
+Life follows the same structure.
 
-Most of what matters unfolds inside incomplete information.  
-Signals are noisy.  
-Feedback arrives late.  
+Most of what matters unfolds within incomplete information.  
+Signals arrive distorted.  
+Feedback lags behind action.  
 Outcomes remain provisional.
 
-Yet action is still required.
+Action remains necessary.
 
-We like to imagine that good decisions are made from certainty.  
-In practice, they are made from orientation.
+Good decisions are often imagined as products of certainty.  
+In practice, they emerge from orientation.
 
-A system does not need to know exactly where it will end to move coherently.  
-It needs a direction, sensitivity to feedback, and the capacity to adjust.
+A system does not need to know exactly where it will end.  
+It needs direction, sensitivity to feedback, and the ability to adjust.
 
-This is how navigation works in the dark.  
-Not through foresight, but through response.
+This is navigation in the dark.
 
-When guarantees disappear, many people freeze.  
-They mistake uncertainty for danger.  
-They wait for reassurance that never comes.
+Movement guided by response rather than foresight.
 
-Others move recklessly, hoping speed will outrun doubt.  
-They confuse motion with alignment.
+When guarantees disappear, many systems freeze.  
+Uncertainty is misread as danger.  
+Waiting replaces motion.
 
-Both are reactions to the same discomfort.
+Others accelerate.  
+They move quickly in the hope that speed will outrun doubt.  
+Motion substitutes for alignment.
 
-Acting without guarantees is neither hesitation nor impulse.  
+Both reactions arise from the same discomfort.
+
+Acting without guarantees occupies a different space.
+
 It is commitment without illusion.
 
-You move not because the outcome is secure,  
-but because the direction is coherent enough to follow.
+Movement occurs not because the outcome is secure,  
+but because the direction holds coherence under pressure.
 
-In real systems, stability is provisional.  
-It holds only as long as conditions remain within tolerable bounds.  
-When those bounds are crossed, adaptation replaces control.
+In real systems, stability is always provisional.  
+It holds while conditions remain within tolerance.  
+When those limits are crossed, adaptation replaces control.
 
 Responsiveness is intelligence.
 
-Living systems do not demand certainty.  
-They demand responsiveness.
+Living systems do not require certainty.  
+They require the capacity to respond.
 
-You choose.  
-You act.  
-You observe.
+A decision is made.  
+Action follows.  
+Feedback arrives.
 
-Then you update.
+The system updates itself.
 
-It is refinement in motion.
+Clarity accumulates through contact.
 
-The mistake is thinking that action must be justified by certainty.  
-In reality, action is what produces clarity.
+The belief that action must be justified by certainty reverses the order of operations.  
+Action is what generates clarity.
 
 Meaning does not precede movement.  
-It accumulates through it.
+It emerges through it.
 
-Every step taken without a guarantee strengthens something quieter than confidence.  
+Each step taken without a guarantee strengthens something quieter than confidence.
+
 Trust.
 
 Not trust in outcomes.  
-Trust in your capacity to respond when outcomes change.
+Trust in responsiveness.
 
-This is the difference between courage and recklessness.
+This is the distinction between recklessness and courage.
 
 Recklessness ignores consequence.  
-Courage accepts uncertainty and moves anyway.
+Courage moves while accounting for uncertainty.
 
-At the quantum level, nothing moves along a single path.
+At the quantum level, no particle travels along a single, defined path.  
+It occupies a field of possibility.  
+Only interaction resolves direction.
 
-A particle does not travel from here to there in a clean line.  
-It occupies a field of possibilities.  
-Only when interaction occurs does a direction resolve.
+Reality advances through engagement.
 
-Reality advances by engagement.
+Outcomes do not exist in advance, waiting to be chosen.  
+They take shape through participation.
 
-Outcomes do not exist in advance, waiting to be selected.  
-They are shaped by participation itself.
+Every decision functions as a measurement.  
+Each step collapses one possibility and opens others.
 
-Every decision is a measurement.  
-Every step collapses one possibility and opens another.  
-Not cleanly.  
-Not permanently.
+Temporarily.  
+Provisionally.
 
 The universe does not reward hesitation with clarity.  
 It responds to contact.
 
-It is a different kind of order.
+This is a different kind of order.
 
 One that cannot be controlled from the outside,  
 only navigated from within.
 
-The middle does not promise safety.  
+The middle does not promise safety.
+
 It offers orientation inside uncertainty.
 
-You step forward not because the ground is secure,  
-but because remaining motionless resolves nothing.
+Movement continues not because the ground is secure,  
+but because remaining still resolves nothing.
 
-This is how movement continues  
+This is how motion persists  
 in a universe that was never certain to begin with.
