--- a/src/book/Part III: The Living Axis/14. Meaning Without Absolutes.md
+++ b/src/book/Part III: The Living Axis/14. Meaning Without Absolutes.md
@@ -2,72 +2,84 @@
 
 For most of human history, meaning was assumed to be given.
 
-Not discovered, not negotiated – given.  
-By God, by nature, by reason, by destiny.  
-The task was not to create meaning, but to align with it.
+By God.  
+By nature.  
+By reason.  
+By destiny.
 
-This assumption shaped entire civilisations.  
+Meaning did not need to be discovered or negotiated.  
+It was received.  
+The task was alignment.
+
+This assumption shaped civilisations.  
 It stabilised behaviour.  
 It ordered values.  
-It gave suffering a context it did not need to justify itself.
+It gave suffering a context that did not require justification.
 
-But it also depended on something fragile: certainty.
+It also depended on certainty.
 
-When the modern world began to question absolutes, it did not do so lightly.  
-It did so because they no longer held.
+When the modern world began to question absolutes, it did so because they no longer held.  
+The structures that once carried meaning began to fracture under their own weight.
 
-Nietzsche saw this fracture clearly.  
-When he declared that “God is dead,” he was not celebrating.  
-He was diagnosing a collapse in the structures that once guaranteed meaning.
+Nietzsche recognised this collapse with clarity.  
+When he wrote that “God is dead,” he was not announcing liberation.  
+He was diagnosing the failure of a system that could no longer sustain belief.
 
-What followed was not freedom, but vertigo.
+What followed was not freedom.
 
-Existential philosophy emerged not to answer the question of meaning,  
-but to face the fact that it could no longer be outsourced.
+It was vertigo.
+
+Existential philosophy emerged to face this condition directly.  
+Not to replace lost meaning,  
+but to acknowledge that it could no longer be inherited.
 
 Sartre argued that existence precedes essence – that we arrive without a script.  
 Camus refused consolation, insisting that the absurd must be faced without appeal.  
-The Stoics, centuries earlier, had already begun this work by drawing a sharp line between what is given and what remains within our control.
+The Stoics, centuries earlier, had already begun drawing a boundary between what is given and what remains within our control.
 
-Across these traditions, a shared insight appears:
+Across these traditions, a shared recognition appears.
 
 Meaning is no longer guaranteed by structure.  
 It must be lived without final justification.
 
-This does not mean meaning disappears.  
-It means its foundation changes.
+Meaning does not disappear.  
+Its foundation shifts.
 
 Instead of resting on universals, it rests on orientation.  
 Instead of being inherited, it is sustained.  
 Instead of being proven, it is enacted.
 
-This is deeply uncomfortable.
+This shift is destabilising.
 
 Without absolutes, there is no final authority to appeal to.  
-No ultimate explanation that resolves contradiction.  
+No explanation that resolves contradiction.  
 No guarantee that what you are doing will matter in the way you hope.
 
-Philosophy does not rescue us from this condition.  
-It clarifies it.
+Philosophy does not remove this condition.  
+It makes it visible.
 
 The existential task is not to invent meaning arbitrarily,  
-but to live coherently inside its absence of guarantees.
+but to live coherently in a landscape without guarantees.
 
-This is where many retreat.  
-They rush to replace absolutes with identities, ideologies, or narratives strong enough to simulate certainty.
+This is where many retreat.
 
-But substitution is not resolution.
+Absolutes are replaced with identities, ideologies, or narratives strong enough to simulate certainty.  
+Structure is substituted rather than examined.
+
+But substitution does not restore ground.
 
 To live without absolutes is not to live without direction.  
 It is to accept that direction must be continually re-chosen.
 
 This chapter does not answer the question of meaning.  
-It removes the expectation that the answer will arrive whole.
+It releases the expectation that the answer will arrive intact.
 
-What follows is not a solution,  
-but an exploration of how meaning behaves  
+What follows is not resolution,  
+but an examination of how meaning behaves  
 once certainty is no longer its foundation.
 
-The ground is no longer solid.
+The ground has shifted.
 
-But it is real.
+It is no longer solid.
+
+But it remains real.
