--- a/src/book/Part III: The Living Axis/15. Nihilism and the Weightless World.md
+++ b/src/book/Part III: The Living Axis/15. Nihilism and the Weightless World.md
@@ -1,119 +1,129 @@
 # **Chapter 15 – Nihilism and the Weightless World**
 
-What we experience in the present is never isolated.  
-It is layered.
+What you experience in the present is never isolated.  
+It arrives layered.
 
-Every moment carries the residue of what preceded it –  
-systems built earlier, promises made under different conditions, expectations formed in worlds that no longer exist.
+Every moment carries residue –  
+systems built earlier,  
+promises made under different conditions,  
+expectations formed in worlds that no longer exist.
 
-Sometimes those layers no longer align.
+Sometimes those layers fall out of alignment.
 
-The structures that once translated effort into outcome remain in place,  
+The structures that once translated effort into outcome remain visible,  
 but they no longer respond as they did.  
 The rules are followed.  
-The results do not arrive.
+The response does not arrive.
 
-This creates a specific state – a sense that meaning has become unanchored. Values still exist, but they no longer bind experience together. Choice remains possible, but it no longer feels consequential.
+A specific state emerges.
+
+Meaning feels unanchored.  
+Values remain, but they no longer bind experience together.  
+Choice is still available, but it no longer feels consequential.
 
 The world becomes light.
 
 In a weightless environment, direction loses traction.  
-Movement continues, but without gradient.  
+Movement continues, but gradient disappears.  
 Commitment feels exposed.  
-Distance feels safer than depth.
+Distance feels efficient.
 
-In such conditions, motivation does not fail.  
-Direction does.  
-When gradient disappears, effort loses orientation rather than energy.
+In these conditions, motivation does not fail.  
+Orientation does.
 
-This condition is often mistaken for apathy.  
-It is closer to suspension.
+When gradient vanishes, effort loses direction rather than energy.
 
-Only after this state has taken hold do we give it a name.
+This state is often misread as apathy.  
+Structurally, it is suspension.
 
-Nihilism does not appear in a vacuum.  
+Only after it settles do we name it.
+
+Nihilism does not appear without cause.  
 It arises when inherited structures stop producing the outcomes they once did.
 
-For a long time, meaning was supported by continuity.  
+For a long time, meaning rested on continuity.  
 Effort accumulated.  
 Sacrifice led somewhere.  
-The future felt like an extension of the present.
+The future extended the present.
 
-Those assumptions shaped behaviour quietly and effectively.  
-They did not need to be examined because they worked.
+These assumptions shaped behaviour quietly.  
+They did not require examination because they worked.
 
 But systems age.
 
-Conditions change faster than narratives.  
+Conditions shift faster than narratives.  
 Mechanisms that once converted alignment into progress lose efficiency.  
 The exchange weakens.
 
-What remains is not immediately despair, but confusion.  
-The sense that one is still participating,  
-yet no longer being met.
+What remains is not despair, but disconnection.  
+Participation continues,  
+yet response fades.
 
-Effort feels disconnected from outcome.  
-Discipline feels ornamental.  
-Commitment feels increasingly asymmetrical.
+Effort no longer meets resistance.  
+Discipline loses traction.  
+Commitment begins to feel asymmetrical.
 
-The system fails even when intention remains intact, because structure no longer carries the load.
+The system fails to carry load even when intention remains intact.
 
-Perspective matters here.
+Perspective alters the experience.
 
-Those who grew up inside functioning systems experience this as loss.  
-Those who arrive after the decline experience it as normal.
+Those raised within functioning systems register this as loss.  
+Those arriving after decline register it as normal.
 
-What looks like disengagement in the present  
+What appears as disengagement in the present  
 is often adaptation to an environment where guarantees have already dissolved.
 
 Nihilism, in this sense, is not rebellion.  
 It is inheritance.
 
-Nietzsche understood this as a transitional state.  
-When the highest values lose their organising power,  
-the space they leave behind does not immediately refill.
+Nietzsche recognised this as a transitional condition.  
+When organising values lose their force,  
+the space they leave does not immediately refill.
+
+The landscape flattens.
 
 Quiet.  
 Grey.  
-Flat.
+Low contrast.
 
-A flat landscape does not pull you anywhere.
+A flat landscape exerts no pull.
 
-In any dual system, inner and outer follow the same rules.  
-When external structures lose gradient, internal orientation collapses with them.  
-Meaning does not disappear because people stop caring,  
-but because the forces that once shaped direction cancel out.  
+In any dual system, inner and outer obey the same mechanics.  
+When external structures lose gradient, internal orientation follows.  
+Meaning does not vanish because people stop caring,  
+but because opposing forces cancel.  
+
 What remains is the middle under zero tension –  
 balanced, neutral, and unable to move.
 
-Movement continues, but without consequence.  
-Without resistance, direction loses meaning.
+Motion persists without consequence.  
+Without resistance, direction dissolves.
 
-In such conditions, distance becomes efficient.  
+In such environments, distance becomes economical.  
 Irony becomes protective.  
-Non-attachment feels economical.
+Non-attachment feels efficient.
 
-These responses are rational in environments that no longer reward depth.
+These responses are adaptive in worlds that no longer reward depth.
 
 But weightlessness cannot sustain life indefinitely.
 
 A system without resistance cannot develop strength.  
 A system without consequence cannot refine itself.
 
-Over time, the absence of response begins to register.  
+Over time, the absence of response registers.  
 Not as sadness,  
 but as fatigue.
 
-The real tension beneath nihilism is not that nothing matters,  
-but that nothing feels capable of holding.
+The pressure beneath nihilism is not that nothing matters,  
+but that nothing can hold.
 
-This chapter does not resolve that tension.
+This chapter does not resolve that pressure.
 
 It names it.
 
-Nihilism marks the interval between worlds –  
+Nihilism marks an interval between worlds –  
 after inherited meaning loses authority,  
-and before new forms of weight are allowed to return.
+and before new forms of weight are permitted to return.
 
 What comes next is not belief restored,  
 but attachment reintroduced.
@@ -121,8 +131,10 @@ but attachment reintroduced.
 Not certainty,  
 but consequence.
 
-Meaning does not return as an idea.  
+Meaning does not return as an idea.
+
 It returns as gravity.
 
-And gravity does not announce itself.  
+And gravity does not announce itself.
+
 It is felt.
