--- a/src/book/Part III: The Living Axis/16. Love, Loss, and Finite Systems.md
+++ b/src/book/Part III: The Living Axis/16. Love, Loss, and Finite Systems.md
@@ -1,16 +1,16 @@
 # **Chapter 16 – Love, Loss, and Finite Systems**
 
-Weight returns through attachment because it is consequential.
+Weight returns through attachment because attachment is consequential.
 
-To love anything is to introduce asymmetry into the system.  
-To care is to allow direction.  
-To bind yourself to something finite is to accept that loss is now possible.
+To love anything introduces asymmetry into the system.  
+To care allows direction.  
+To bind yourself to something finite accepts the possibility of loss.
 
 Attachment is not primarily moral.  
-It behaves like physics.
+It follows mechanics.
 
 Every attachment creates gradient.  
-Every gradient reintroduces motion.
+Every gradient restores motion.
 
 What nihilism suspends, love reactivates.
 
@@ -19,13 +19,13 @@ In an attached world, something does.
 
 Time sharpens.  
 Choice narrows.  
-Presence becomes costly.
+Presence acquires cost.
 
 This is why love feels dangerous in flattened systems.  
-It breaks neutrality.  
+It disrupts neutrality.  
 It demands orientation.
 
-But this demand is precisely what restores coherence.
+That demand restores coherence.
 
 A finite system is one that can be damaged.  
 One that can be lost.  
@@ -33,62 +33,62 @@ One that cannot be replaced without consequence.
 
 Only finite systems generate meaning.
 
-This is a structural claim.
+This is structural.
 
 In physics, systems that cannot lose energy cannot change state.  
 In life, systems that cannot be lost cannot be valued.
 
 Love introduces loss in advance.  
-Not as tragedy,  
-but as condition.
+As condition rather than catastrophe.
 
-You do not wait to lose something in order for it to matter.  
-It matters because it *could* be lost.
+Something matters because it can be lost,  
+not because it will be preserved.
 
-This is why attachment feels heavy.  
-It is.
+This is why attachment feels heavy.
 
 Weight is not a flaw.  
-It is the signal that the system is alive.
+It is a signal.
 
 Loss, when it arrives, does not negate meaning.  
 It completes it.
 
-What breaks is not the attachment,  
-but the illusion that permanence was required.
+What breaks is not attachment itself,  
+but the assumption that permanence was required.
 
 Grief is evidence that love functioned.
 
-The mistake is to treat loss as something to be avoided,  
+The error is treating loss as something to avoid,  
 rather than as the cost of coherence.
 
-A system without loss avoids pain,  
-but also avoids depth.
+A system that avoids loss avoids pain.  
+It also avoids depth.
 
-A system that allows loss refines itself through consequence.
+A system that permits loss refines itself through consequence.
 
 This is where the middle is tested.
 
-To be in the middle is to remain oriented within attachment.
-
-It is to remain oriented  
-while allowing gravity to act.
+To remain in the middle is to stay oriented within attachment.  
+To hold position while allowing gravity to act.
 
 Love pulls.  
 Loss pulls harder.
 
-The middle is not the absence of these forces,  
-but the point from which they can be borne  
+The middle is not the absence of these forces.  
+It is the point from which they can be borne  
 without fragmentation.
 
-This is why meaning does not return through certainty.  
+Meaning does not return through certainty.
+
 It returns through commitment.
 
-Commitment shifts from outcomes to orientation under uncertainty.
+Commitment shifts away from outcomes  
+toward orientation under uncertainty.
 
-The system moves again, weighted enough to produce direction.
+The system moves again,  
+weighted enough to produce direction.
 
-And with weight comes direction.
+And with weight, direction returns.
 
 Real.  
-Without guarantees or permanence.
+Finite.  
+Without guarantees.
