--- a/src/book/Part IV: The Horizon Beyond/18. Decay, Adaptation, and the Will to Remain.md
+++ b/src/book/Part IV: The Horizon Beyond/18. Decay, Adaptation, and the Will to Remain.md
@@ -1,89 +1,91 @@
 # **Chapter 18 – Decay, Adaptation, and the Will to Remain**
 
-No system endures unchanged.
+No system endures without change.
 
-What survives does so by letting parts of itself fall away.
+What survives does so by allowing parts of itself to fall away.
 
 This is maintenance.
 
-In nature, decay is not the opposite of life.  
-It is the mechanism by which life continues.  
-Dead tissue is broken down.  
-Spent cells are recycled.  
-Energy is released back into the system.
+In living systems, decay is a continuation of life’s process.  
+Dead tissue breaks down.  
+Spent cells recycle.  
+Energy returns to circulation.
 
-Nothing living is static.  
-Stability is achieved through continuous turnover.
+Stability emerges through turnover.
 
-The same is true inwardly.
+Nothing alive remains fixed.  
+Form persists because components are replaced.
 
-What you once needed may no longer serve you.  
-What once protected you may now restrict you.  
-Patterns that carried you through one environment  
-can become liabilities in another.
+The same mechanics operate inwardly.
 
-When these patterns persist beyond their usefulness,  
+What was once necessary may no longer fit.  
+What once protected may begin to constrain.  
+Patterns shaped by one environment  
+become liabilities in another.
+
+When these patterns persist beyond their function,  
 strain accumulates.
 
-We often resist this moment.  
-We interpret decay as loss of identity.  
-As regression.  
-As weakness.
+This moment is often resisted.
 
-But holding onto outdated structures is what destabilises systems.
+Decay is misread as loss of identity,  
+as regression,  
+as weakness.
 
-In physics, structures that cannot shed energy  
-accumulate stress until they fracture.  
-In life, identities that cannot release obsolete roles  
-eventually collapse under their own weight.
+Yet systems destabilise when outdated structures are retained.
 
-Adaptation is subtraction.
+In physics, structures that cannot release energy  
+accumulate stress until fracture occurs.  
+In lived systems, identities that cannot shed obsolete roles  
+collapse under their own weight.
 
-The middle plays a precise role here.
+Adaptation works through subtraction.
 
-To remain centred is to allow change to occur  
-without losing orientation.
+The middle serves a precise function here.
 
-You are asked to update.
+Remaining oriented allows change to occur  
+without loss of direction.
 
-Decay, when allowed, reduces load.  
-It frees energy trapped in maintaining forms  
-that no longer match reality.
+An update becomes possible.
 
-This is why renewal often feels like relief  
-before it feels like progress.
+When decay is permitted, load decreases.  
+Energy is freed from maintaining forms  
+that no longer correspond to reality.
+
+This is why renewal often registers as relief  
+before it registers as progress.
 
 Something heavy has been set down.
 
-What remains is not emptiness,  
+What follows is not absence,  
 but capacity.
 
-The will to remain is not the will to preserve everything.  
-It is the will to preserve what still carries force.
+The will to remain does not preserve everything.  
+It preserves what still carries force.
 
 Living systems do not defend every part equally.  
 They prioritise coherence over continuity.
 
-This is a difficult truth.
+This is difficult to accept.
 
-Because decay is rarely dramatic.  
-It is quiet.  
-Incremental.  
-Often unnoticed until what has fallen away  
-is no longer missed.
+Decay rarely announces itself.  
+It proceeds quietly,  
+incrementally,  
+often unnoticed until what has fallen away  
+is no longer required.
 
-But this quiet shedding is what prevents rupture.
+This quiet shedding prevents rupture.
 
-A system that adapts survives.  
-A system that clings breaks.
+A system that adapts endures.  
+A system that clings fractures.
 
-The middle does not resist decay.  
+The middle does not oppose decay.  
 It regulates it.
 
 It allows what must end to end  
-so that what remains can endure.
+so that what remains can carry forward.
 
 This is intelligence.
 
-And it is how life continues  
+It is how life continues  
 without losing its centre.
