--- a/src/book/Part IV: The Horizon Beyond/19. Lightness and the Art of Shedding Mass.md
+++ b/src/book/Part IV: The Horizon Beyond/19. Lightness and the Art of Shedding Mass.md
@@ -1,13 +1,14 @@
 # **Chapter 19 – Lightness and the Art of Shedding Mass**
 
-Freedom is often misunderstood as distance.
+Freedom is often mistaken for distance.
 
-To be free is assumed to mean leaving –  
+It is assumed to mean leaving –  
 leaving the situation,  
 leaving the relationship,  
 leaving the weight behind.
 
-But distance is not the only way to reduce force.
+Distance is one way force changes.  
+It is not the only one.
 
 In physics, motion is governed not only by speed,  
 but by mass.
@@ -15,81 +16,82 @@ but by mass.
 How heavy something is  
 determines how strongly it is held.
 
-Most attempts at freedom focus on acceleration.  
+Most attempts at freedom rely on acceleration.  
 More effort.  
 More resolve.  
 More energy directed outward.
 
-This works, briefly.  
+This works briefly.  
 Then exhaustion follows.
 
-There is another option.
+Another option exists.
 
 Instead of increasing speed,  
-you reduce weight.
+weight is reduced.
 
-Mass, in human systems, is not physical.  
-It is significance.  
-It is the story you carry.  
+In human systems, mass is not physical.  
+It is significance.
+
+The story you carry.  
 The need to be right.  
-The need to be seen a certain way.  
-The accumulation of identity built under older conditions.
+The need to be seen in a particular way.  
+The accumulation of identity shaped under earlier conditions.
 
-Mass is not bad.  
-It gives presence.  
+Mass is not inherently harmful.  
+It grants presence.  
 It allows gravity to act.
 
-But unnecessary mass distorts motion.
+Excess mass distorts motion.
 
 When too much meaning is attached to outcomes,  
-movement becomes rigid.  
-When too much identity is bound to roles,  
+movement stiffens.  
+When identity is bound too tightly to roles,  
 adaptation slows.
 
-Shedding mass is not withdrawal.  
-It is refinement.
+Shedding mass operates through refinement.
 
-You let go of what no longer needs to be defended.  
-You stop reinforcing narratives that have already served their purpose.  
-You reduce the internal weight required to remain coherent.
+What no longer requires defence is released.  
+Narratives that have completed their function are no longer reinforced.  
+The internal load required to remain coherent decreases.
 
 This does not remove you from the system.  
-It changes how the system acts upon you.
+It alters how the system acts upon you.
 
-Gravity still exists.  
-Forces still operate.  
-But they no longer grip as tightly.
+Gravity remains.  
+Forces continue.  
+Their grip loosens.
 
-This is why letting go often feels like relief  
-before it feels like clarity.
+This is why letting go registers as relief  
+before it registers as clarity.
 
-Something has been made lighter.
+Something heavy has been reduced.
 
-The middle is essential here.
+The middle matters here.
 
-To shed mass without losing centre  
-is to remain present  
+To shed mass while remaining centred  
+is to stay present  
 without being overdetermined.
 
-You do not escape the field.  
-You move through it differently.
+You do not leave the field.  
+You move within it differently.
 
-Lightness is not detachment from life.  
-It is participation without excess load.
+Lightness is participation without excess load.
 
-This is why true freedom rarely looks dramatic.  
-It looks quieter.  
+This is why freedom rarely announces itself.  
+It appears quieter.  
 More spacious.  
 Less reactive.
 
 Not because nothing matters,  
-but because not everything needs to matter equally.
+but because significance is no longer distributed indiscriminately.
 
-The art is not in becoming weightless,  
-but in carrying only what still exerts real force.
+The art is not weightlessness.
+
+It is carrying only what still exerts real force.
 
 This is how motion remains possible  
 without constant strain.
 
-Not by fleeing gravity,  
-but by no longer being held by what you have already outgrown.
+Not by escaping gravity,  
+but by no longer being bound  
+to what has already been outgrown.
