--- a/src/book/Part IV: The Horizon Beyond/20. Coherence in Motion.md
+++ b/src/book/Part IV: The Horizon Beyond/20. Coherence in Motion.md
@@ -1,9 +1,9 @@
 # **Chapter 20 – Coherence in Motion**
 
-By now, the pattern should be clear.
+By now, the pattern should be visible.
 
 Nothing in your life operates in isolation.  
-Force, attachment, decay, lightness – these are not phases you pass through.  
+Force, attachment, decay, lightness – these are not stages you pass through.  
 They are concurrent properties of living systems.
 
 You do not first choose, then discipline, then love, then lose, then adapt, then let go.  
@@ -11,19 +11,21 @@ All of these forces act at once.
 
 This is why life rarely feels resolved.
 
-A system in motion is never static long enough to feel complete.  
-Stability, when it appears, is temporary – a momentary balance of forces, not an endpoint.
+A system in motion does not stabilise long enough to feel complete.  
+Stability, when it appears, is provisional – a temporary balance of forces, not an endpoint.
 
-It *is* the design.
+This is not a flaw.
+
+It is the design.
 
 In complex systems, coherence does not mean stillness.  
 It means coordination.
 
-Many people mistake peace for the absence of tension.  
+Many mistake peace for the absence of tension.  
 In reality, peace is tension distributed cleanly through the structure.
 
 The middle is the orientation that allows multiple forces to pass through you  
-without tearing you apart.
+without fracture.
 
 Love pulls.  
 Loss releases.  
@@ -31,41 +33,38 @@ Commitment loads.
 Decay lightens.  
 Time stretches and compresses.
 
-None of these cancel each other out.  
-They shape each other.
+None of these cancel one another.  
+They shape one another.
 
 When coherence is present, force becomes informative.  
 Pressure reveals misalignment early.  
-Fatigue signals the need for adaptation.  
-Loss clarifies what still matters.
+Fatigue signals the need for adjustment.  
+Loss clarifies what still carries weight.
 
-Without coherence, the same forces overwhelm.
+Without coherence, the same forces accumulate destructively.
 
 This is why insight alone does not stabilise a life.  
 Understanding the system does not exempt you from its mechanics.
 
-But it does allow you to move *with* them.
+What it offers is orientation.
 
 To be in the middle is to remain oriented as forces change.
 
-You will still feel pulled.  
+You will still be pulled.  
 You will still shed.  
 You will still grieve.  
-You will still need to adjust.
+You will still need to recalibrate.
 
 What changes is not the presence of force,  
-but your relationship to it.
+but how it moves through you.
 
-The goal is not permanence.  
+The aim is not permanence.  
 It is coherence under change.
 
-A life that can move  
-without losing its centre  
-does not need to be resolved.
+A life that can remain intact while moving  
+does not require resolution.
 
-It only needs to remain intact.
+It requires maintenance.
 
-This is maintenance.
-
-And maintenance, applied consistently,  
+And maintenance, applied continuously,  
 is how complex systems endure.
