--- a/src/book/Part IV: The Horizon Beyond/21. Finitude and the Shape of Time.md
+++ b/src/book/Part IV: The Horizon Beyond/21. Finitude and the Shape of Time.md
@@ -2,14 +2,14 @@
 
 Everything that has weight is finite.
 
-It is the condition that gives life shape.
+This is what gives life its shape.
 
 Without finitude, nothing differentiates.  
-Without an end, no moment carries more force than another.
+Without an ending, no moment carries more force than another.
 
-Time, as we experience it, is not a neutral backdrop.  
+Time, as it is lived, is not a neutral backdrop.  
 It is a pressure gradient.  
-It compresses meaning by limiting duration.
+It concentrates meaning by limiting duration.
 
 This is why urgency exists.  
 Why delay costs something.  
@@ -19,36 +19,38 @@ In physics, time is inseparable from change.
 A system that does not change does not experience time.  
 A system that cannot end does not move toward anything.
 
-Human life is structured by this same rule.
+Human life follows the same rule.
 
 Because time is limited, choice matters.  
 Because energy is finite, attention becomes selective.  
 Because bodies fail, priorities clarify.
 
-Time does not make things meaningful by ending them, but by forcing choice.  
-What cannot be postponed forever must finally be prioritised.
+Time does not make things meaningful by ending them,  
+but by forcing choice.
+
+What cannot be postponed indefinitely  
+must eventually be placed.
 
 Mortality is not an interruption to meaning.  
-It is the force that concentrates it.
+It is the force that compresses it.
 
-Many philosophies attempt to soften this truth.  
+Many traditions attempt to soften this fact.  
 To outthink it.  
 To transcend it.
 
-But finitude does not need consolation.  
-It needs orientation.
+But finitude does not require consolation.  
+It requires orientation.
 
 The middle plays a decisive role here.
 
 To be in the middle is to allow the knowledge of an ending  
-to inform how weight is distributed now.
+to shape how weight is distributed now.
 
 When time is ignored, life becomes diffuse.  
-When time is feared, life becomes constricted.
-
+When time is feared, life becomes constricted.  
 When time is integrated, life becomes precise.
 
-This is why regret is rarely about what happened.  
+This is why regret is rarely about events themselves.  
 It is about misallocated energy.  
 Attention spent where it did not belong.  
 Commitments made without coherence.
@@ -57,14 +59,14 @@ The middle does not eliminate regret.
 It reduces its scale.
 
 It keeps action proportional  
-to what actually matters.
+to what actually carries weight.
 
 You do not need infinite time  
 to live coherently.
 
-You need enough clarity  
+You need sufficient clarity  
 to place weight deliberately  
-within the time you have.
+within the time that remains.
 
 Finitude does not ask you to rush.  
 It asks you to choose.
