--- a/src/book/Part IV: The Horizon Beyond/22. The Living Axis.md
+++ b/src/book/Part IV: The Horizon Beyond/22. The Living Axis.md
@@ -3,14 +3,14 @@
 At some point, the search for resolution ends.
 
 Not because everything has been answered,  
-but because you recognise the pattern well enough  
-to stop demanding an exit.
+but because the pattern has become clear enough  
+that you stop demanding an exit.
 
 You are not meant to arrive at a final state.  
 There is no configuration that holds indefinitely.  
 No alignment that does not require correction.
 
-This was never a failure of effort.  
+This is not a failure of effort.  
 It is the nature of living systems.
 
 Everything that moves does so around a centre.  
@@ -28,7 +28,7 @@ In love – where weight gives meaning and loss completes it.
 In decay – where shedding allows endurance.  
 In time – where finitude sharpens what is held.
 
-None of these contradict each other.  
+None of these contradict one another.  
 They describe the same geometry  
 from different angles.
 
