--- a/src/book/Part IV: The Horizon Beyond/23. Corollaries of the Middle.md
+++ b/src/book/Part IV: The Horizon Beyond/23. Corollaries of the Middle.md
@@ -1,48 +1,103 @@
 # **Chapter 23 – Corollaries of the Middle**
 
-A unified theory is only useful if it can be carried – a small set of rules that remain true under pressure.
+A unified theory is only useful if it can be carried –  
+a small set of rules that remain true under pressure.
 
-What follows is a collection of corollaries – the practical shape of the middle, stated cleanly.
+What follows is a collection of corollaries –  
+the practical shape of the middle, stated cleanly.
 
 Meaning does not vanish first.  
 Gradient does.
 
-When effort no longer maps to outcome, orientation collapses through flattening: motion without traction, activity without direction.  
-Restore gradient and meaning begins to return through motion—the felt pull of consequence.
+When effort no longer maps to outcome, orientation collapses through flattening:  
+motion without traction,  
+activity without direction.  
+Restore gradient and meaning begins to return through motion –  
+the felt pull of consequence.
 
-The return to old patterns works like this too.  
-Repetition is not always regression; it can be training under real conditions, where the loop repeats but your position inside it shifts.  
+The return to old patterns works the same way.  
+Repetition is not always regression;  
+it can be training under real conditions,  
+where the loop repeats  
+but your position inside it shifts.
+
 Less urgency.  
 More margin.  
 More coherence under the same trigger.
 
-Exhaustion often has less to do with capacity than with what is being carried.  
-Mass, in human systems, is significance: stories that no longer serve, identity held too tightly, outcomes made too heavy.  
-Shedding that weight does not remove you from life; it changes how life acts upon you.
+Exhaustion often has less to do with capacity  
+than with what is being carried.
 
-Endings do something similar.  
+Mass, in human systems, is significance:  
+stories that no longer serve,  
+identity held too tightly,  
+outcomes made too heavy.
+
+Shedding that weight does not remove you from life.  
+It changes how life acts upon you.
+
+Endings behave similarly.
+
 Loss removes and reveals.  
-It clarifies what was actually weighted, what was held by illusion, where energy was misallocated.  
-Grief is the system registering consequence, not the system breaking.
+It clarifies what was actually weighted,  
+what was held by illusion,  
+where energy was misallocated.
 
-And some forms of decay are not collapse at all.  
-Living systems stay alive by releasing what no longer fits their environment.  
-What looks like disintegration from the outside is sometimes maintenance from within–an update written in subtraction.
+Grief is the system registering consequence,  
+not the system breaking.
 
-People try to escape tightening orbits by adding speed.  
-Escape velocity is expensive; it burns fuel and leaves damage.  
-So they try the opposite and call it peace, when it is often only a slow loss of motion.  
-Either way, the orbit holds if the weight that binds it is kept intact.
+Some forms of decay are not collapse at all.
 
-Coherence is rarer than certainty and more available.  
-It is the ability to remain intact while changing state: orientation under force, maintenance under time, clarity under constraint.  
-When coherence is present, pressure does not disappear, but it stops tearing the system into parts.
+Living systems stay alive  
+by releasing what no longer fits their environment.  
+What looks like disintegration from the outside  
+is sometimes maintenance from within –  
+an update written in subtraction.
 
-There is a mechanical truth underneath this, simple enough to recognise and hard enough to forget:
+People try to escape tightening orbits by adding speed.
 
-Failure is not determined by how much force a system encounters, but by how that force is aligned.  
-When pressure passes through the centre, it becomes load and can be carried.  
-When it acts at a distance from the axis, it becomes torque and fractures the structure over time.
+Escape velocity is expensive.  
+It burns fuel.  
+It leaves damage.
 
-Endurance is therefore not a matter of strength, but of orientation.  
-Alignment converts destabilising force into something that can be borne.
+So they try the opposite and call it peace,  
+when it is often only a slow loss of motion.
+
+Either way, the orbit holds  
+if the weight that binds it is kept intact.
+
+Coherence is rarer than certainty  
+and more available.
+
+It is the ability to remain intact  
+while changing state:  
+orientation under force,  
+maintenance under time,  
+clarity under constraint.
+
+When coherence is present,  
+pressure does not disappear,  
+but it stops tearing the system into parts.
+
+There is a mechanical truth beneath all of this –  
+simple enough to recognise  
+and hard enough to remember:
+
+Failure is not determined  
+by how much force a system encounters,  
+but by how that force is aligned.
+
+When pressure passes through the centre,  
+it becomes load  
+and can be carried.
+
+When it acts off-axis,  
+it becomes torque  
+and fractures the structure over time.
+
+Endurance, therefore,  
+is not a matter of strength  
+but of orientation.
+
+Alignment converts destabilising force  
+into something that can be borne.
