--- a/src/book/introduction/0. Introduction: A Centre That Moves.md
+++ b/src/book/introduction/0. Introduction: A Centre That Moves.md
@@ -24,7 +24,7 @@ You become capable of directing your life instead of reacting to it.
 
 Physics mirrors this.  
 Every dynamic system has a point of equilibrium – a centre where noise falls away and the underlying pattern becomes visible.  
-The equations don’t change at the centre.  
+The equations do not change at the centre.  
 *You* do.  
 Distortion fades.  
 Structure emerges.
@@ -33,7 +33,7 @@ Philosophy has always circled this same truth.
 The Stoics called it the **hegemonikon** – the governing seat within the self.  
 Taoist thought frames it as the unforced axis.  
 Advaita describes it as the witness behind the actor.  
-All of them point toward a single idea:  
+Each points toward the same reality:  
 **there is a place within you untouched by the storm, and it is from that place you see clearly.**
 
 This book is an attempt to reach that place through a union of stillness and effort – through experience, physics, psychology, and meaning.
@@ -53,12 +53,12 @@ Enough to feel the difference between tension and readiness.
 Enough to return to the part of you that responds instead of reacts.
 
 Notice your state.  
-Curiosity?  
-Fatigue?  
-Restlessness?  
+Curiosity.  
+Fatigue.  
+Restlessness.  
 It matters.  
-Your internal conditions shape what you can absorb,  
-just as environmental conditions shape how a structure takes weight.
+Internal conditions shape what you can absorb,  
+just as environmental conditions shape how a structure carries weight.
 
 This is the work – awareness of the forces acting within you, without theatre and without fantasy.
 
