--- a/src/book/Part I: The Axis of Becoming/4. Discipline and the Physics of Motion.md
+++ b/src/book/Part I: The Axis of Becoming/4. Discipline and the Physics of Motion.md
@@ -1,101 +1,98 @@
 # **Chapter 4 – Discipline and the Physics of Motion**
 
 Choice sets a direction, but direction alone does not build a life.  
-Every intention begins with a threshold – a moment where your body tests your certainty before you even move.  
-Discipline is how you cross that threshold.
+Every intention begins with a threshold – a moment where the body tests certainty before movement begins.  
+Discipline is how that threshold is crossed.
 
-Not through force.  
 Through follow-through.
 
-Before movement begins, there is always resistance.  
+Before motion starts, resistance is always present.  
 A thickness in the air.  
 A hesitation beneath the breath.  
 A sense that the system has not yet aligned itself.
 
-The boxer knows this truth instinctively.
+The boxer knows this instinctively.
 
 The real work is not in the punch – anyone can throw a punch.  
-It happens in the second before impact: the breath held, the hips loaded, the eyes narrowing to a single point.  
+It happens in the moment before impact: the breath held, the hips loaded, the eyes narrowing to a single point.  
 Hesitation costs more than impact.  
 A half-committed strike wastes energy, the body bracing against a movement it refuses to finish.
 
-But when the fighter commits – fully, without flinch or delay – the physics change.  
-The motion becomes a single line.  
-Muscle, bone, breath, the earth herself all align into one direction.  
-From the ground to the fist, unyielding.
+When the fighter commits – fully, without flinch or delay – the physics change.  
+The motion resolves into a single line.  
+Muscle, bone, breath, and ground align into one direction.  
+From the earth to the fist.
 
-The effort doesn’t increase.  
+The effort does not increase.  
 The efficiency does.
 
 This is discipline:  
-not the strike itself, but the commitment that makes the strike effortless.
+the commitment that allows movement to carry itself.
 
-You see the same truth in quieter places.
+The same mechanics appear in quieter places.
 
-Picture the violinist.  
-The first note does not sing – it resists.  
-The bow meets the string and skips, jumps, scrapes across it.  
-A harsh, fractured sound – the first cut of a saw biting into wood, the jarring scrape of friction, nails dragged across a board.  
-The music is not there yet.  
+Consider the violinist.  
+The first note resists.  
+The bow meets the string and skips, scrapes, fractures the sound.  
+A harsh vibration – like a saw biting into wood, friction announcing itself.  
+The music has not arrived yet.  
 Only tension.
 
-The instinct is to ease off, to adjust, to hesitate.  
-But hesitation keeps the string cold.
+The instinct is to adjust, to pull back, to hesitate.  
+That response keeps the string cold.
 
-Then comes the moment the musician leans into the stroke with steady breath.  
-The pressure becomes consistent.  
-The bow settles.  
+Then the musician settles into the stroke with steady breath.  
+Pressure becomes consistent.  
+The bow finds its path.  
 The vibration opens beneath it.  
 The fibres align.  
 The tone warms.  
-Music emerges from continuity, not caution.
+Music emerges from continuity.
 
-Discipline is this:  
+Discipline lives here:  
 a rhythm of breath and contact,  
-a willingness to stay with the friction until it becomes resonance,  
-a presence that lets vibration turn into meaning.
+a willingness to stay with friction until it becomes resonance,  
+a presence that allows vibration to turn into meaning.
 
-And this is the part most people misunderstand.  
-Discipline is not a heroic burst of effort.  
-It is the refusal to break the continuity that allows alignment to happen.
+What is often misunderstood is this:  
+discipline is not a surge of effort.  
+It is continuity sustained long enough for alignment to occur.
 
-Every system fights the first moment.  
+Every system resists the first moment.  
 Cold muscle.  
 Cold string.  
 Cold ambition.  
-The resistance is structural, not personal.
+The resistance is structural.
 
-But once the motion begins –  
-once the system warms –  
+Once motion begins –  
+once warmth enters the system –  
 the cost drops.  
-The action becomes its own momentum.
+Action carries itself forward.
 
-This is why restarting feels harder than beginning.  
-You are not weak.  
-You are paying the tax of stillness.
+This is why restarting feels heavier than beginning.  
+The energy required is the price of stillness.
 
-Discipline lowers that tax.  
-It keeps the rhythm alive long enough for the system to adapt.  
+Discipline reduces that price.  
+It keeps rhythm intact long enough for adaptation to take place.  
 Neural pathways strengthen.  
-Signals clean.  
-Friction falls away.  
-What once felt heavy becomes the natural state of the body.
+Signals clarify.  
+Friction fades.  
+What once felt heavy becomes ordinary.
 
-As long as you negotiate with yourself, you bleed energy.  
+As long as you negotiate with yourself, energy leaks away.  
 Hesitation is the real exhaustion.  
 Clarity is efficient.
 
-Discipline is simply this:
+Discipline is this:
 
 decide once  
 breathe through the first resistance  
-and stay long enough for the motion to take over.
+stay long enough for motion to take over
 
 Strength is not the absence of difficulty.  
-It is the alignment that emerges when you stop stepping out of your own rhythm.
+It is the alignment that appears when you remain inside your own rhythm.
 
 Begin.  
 Commit your weight.  
 Keep the thread warm.  
-Not to impress the world –  
-but to remain in tune with yourself.
+Remain in tune with yourself.
