--- a/src/book/Part I: The Axis of Becoming/5. Resistance and the Counterforce of Self.md
+++ b/src/book/Part I: The Axis of Becoming/5. Resistance and the Counterforce of Self.md
@@ -1,115 +1,117 @@
 # **Chapter 5 – Resistance and the Counterforce of Self**
 
 Every movement toward growth meets an equal and opposite pressure.  
-Not from the outside world – from within.
+It does not arrive from the outside world.  
+It rises from within.
 
-You feel it in the moments where change is possible.  
+You feel it in the moments where change becomes possible.  
 A tightening behind the breath.  
 A pull toward the familiar.  
-A quiet instinct insisting that staying the same is safer than stepping forward.
+A quiet instinct insisting that remaining as you are is safer than stepping forward.
 
 This is homeostasis – the mind and body stabilising around what they know, even when what they know is limiting.
 
 Resistance is the weight of your history pressing against your future.
 
-It appears in subtle ways first:  
+It appears first in subtle forms:  
 the urge to delay,  
-the sudden tiredness,  
+a sudden tiredness,  
 the mind inventing problems it never cared about until now.  
-The familiar becomes seductive precisely because it asks nothing of you.
+The familiar becomes seductive because it demands nothing.
 
-Resistance appears when force finally reaches structure.  
+Resistance appears when force reaches structure.  
 What resists is the shape of what already exists.
 
-Look at meditation.  
-The moment you turn inward, the mind rebels.  
+Consider meditation.  
+The moment attention turns inward, the mind reacts.  
 Thoughts surge.  
 The body twitches.  
-Old fears rise as if summoned by the silence.  
-Nothing is threatening you, yet everything inside you behaves as if something is.
+Old fears surface as if summoned by the quiet.  
+Nothing external is threatening you, yet the system behaves as if something is.
 
 Stillness exposes what distraction keeps buried.
 
 The resistance is not to the practice.  
-It is to the self you meet when the noise fades.
+It is to the version of yourself that becomes visible when the noise recedes.
 
-There is a physical truth that mirrors this with ruthless clarity.  
-A system cannot shift into a new state without receiving enough energy to break the bonds that hold it in place.  
-The first law of thermodynamics – one of reality’s foundation stones – holds that energy is never lost, only transferred or transformed.
+There is a physical principle that mirrors this precisely.  
+A system cannot shift into a new state without receiving enough energy to break the bonds holding it in place.  
+Energy is never lost, only transferred or transformed.
 
-A behavioural pattern follows the same architecture.  
-What built the structure must be matched to undo it.  
-The same force that created your habits is the force required to dismantle them.
+Behaviour follows the same architecture.  
+The force that built a pattern is the force required to undo it.
 
 This is why old behaviours feel heavier than new intentions.  
-You are not only building the next version of yourself –  
-you are breaking the architecture of the previous one.
+You are not only building what comes next –  
+you are dismantling what already exists.
 
-And when resistance lingers long enough, it becomes delay.  
-Not a neutral pause, but a slow consolidation of the old pattern.
+When resistance persists, it often turns into delay.  
+Not a neutral pause, but a quiet reinforcement of the existing structure.
 
 Systems harden when left untouched.  
 Connections deepen.  
-The bonds holding your current behaviour together grow more stable simply because they have not been challenged.
+Bonds stabilise simply because they remain unchallenged.
 
 A structure retains its form unless acted upon by force.  
-If the force arrives late, it must work harder.
+When force arrives late, it must work harder.
 
-This is the consequence we rarely name:  
-**the longer you wait, the more energy it takes to move.**
+This is the consequence that often goes unnamed:  
+**the longer you wait, the more energy movement requires.**
 
-Capacity remains, while the pattern consolidates and strengthens.
+Capacity remains,  
+while the pattern consolidates and strengthens.
 
-Delay consolidates the old pattern.  
-Rest restores the system.
+Delay consolidates.  
+Rest restores.
 
-And this is clarity.  
-When you understand what delay does, you no longer mistake it for safety.  
-You see it as a quiet architect, shaping your future through inaction as surely as choice does through motion.
+Understanding this changes how delay is perceived.  
+It is no longer mistaken for safety.  
+It becomes visible as a quiet architect, shaping the future through inaction as surely as choice shapes it through motion.
 
 Return now to the inner world.
 
-You know the relationship is finished,  
+You sense the relationship has ended,  
 yet you stay.  
-You know the habit corrodes you,  
+You recognise the habit erodes you,  
 yet you repeat it.  
-You know the work diminishes you,  
-yet you cling to the familiarity it provides.
+You feel the work diminishing you,  
+yet you cling to the familiarity it offers.
 
-Familiarity holds, and the activation energy to leave feels momentarily overwhelming.
+Familiarity holds,  
+and the activation energy required to leave feels momentarily overwhelming.
 
-A system remains stable until the energy of transformation exceeds the comfort of the familiar.
+A system remains stable until the energy of transformation exceeds the comfort of the known.
 
-Approach that threshold and the mind begins to fight.  
-Not out of malice –  
+As that threshold approaches, the mind reacts.  
+Not through malice,  
 but preservation.  
-Every identity protects itself, even the ones you are trying to outgrow.
+Every identity protects itself, even the ones being outgrown.
 
-This collision between who you were and who you are becoming is the experience we call resistance.  
+This collision between who you were and who you are becoming is the experience called resistance.  
 Two selves overlapping.  
-One clinging.  
+One holding.  
 One reaching.
 
-The instability you feel is a sign that the old structure is beginning to fracture.
+The instability you feel signals that the old structure has begun to fracture.
 
 Meet the resistance directly.  
-Not with force, but with clarity.  
-Bear witness to the fear, the shake, the clinging instinct of the old self.  
-You do not need to destroy it.  
-You need only to exceed it.
+With clarity.  
+Notice the fear, the tightening, the instinct to cling.  
+There is no need to destroy the old structure.  
+It only needs to be exceeded.
 
-Once the energy of intention surpasses the cost of holding on,  
+When the energy of intention outweighs the cost of holding on,  
 the configuration breaks.  
-The resistance collapses.  
+Resistance collapses.  
 A new equilibrium forms around the person you are becoming.
 
-Change has never been difficult because you are incapable.  
-Change is difficult because the architecture of yesterday must be persuaded to release its grip.
+Change is rarely difficult because capacity is lacking.  
+It is difficult because yesterday’s architecture resists release.
 
 Resistance is evidence of movement.  
-It is friction revealing form,  
-pressure revealing direction,  
-the unmistakable signal that you are standing at a threshold.
+Friction revealing form.  
+Pressure revealing direction.  
+A signal that you are standing at a threshold.
 
 What you cannot face,  
 you cannot outgrow.
