--- a/src/book/Part III: The Living Axis/17. Integrity Under Pressure.md
+++ b/src/book/Part III: The Living Axis/17. Integrity Under Pressure.md
@@ -1,74 +1,74 @@
 # **Chapter 17 – Integrity Under Pressure**
 
-Once weight returns, pressure follows as persistence.
+Once weight returns, pressure follows through persistence.
 
 Every force that introduces meaning also introduces strain.  
 Attachment pulls over time.  
 Commitment accumulates load.  
-Responsibility does not spike – it settles.
+Responsibility does not spike.  
+It settles.
 
-This is where identity is tested: by duration.
+This is where identity is tested:  
+by duration.
 
-Most systems fail under force that is applied consistently.
+Most systems fail under forces that are applied continuously.
 
 In physics, structures are rarely destroyed by impact.  
 They fail through fatigue.  
 Small stresses, repeated without relief,  
 eventually exceed tolerance.
 
-Human systems behave the same way.
+Human systems follow the same rules.
 
-What feels like burnout is often deformation from incoherence, not exhaustion from effort.
+What is called burnout often reflects deformation from misalignment rather than exhaustion from effort.
 
 When who you are  
 and how you are required to move  
-fall out of alignment,  
+lose congruence,  
 strain accumulates.
 
-Integrity is not rigidity.  
-It is congruence.
+Integrity describes congruence.
 
 A system with integrity distributes force through its structure.  
 A system without it concentrates stress until something gives.
 
-This is why performance can be high  
-while coherence quietly erodes.
+This is why performance can remain high  
+while coherence erodes quietly beneath it.
 
-You can function for a long time without integrity.  
-You cannot endure.
+Function can be sustained without integrity.  
+Endurance cannot.
 
-The middle matters here.
+The middle becomes critical here.
 
-To be in the middle is to orient correctly under pressure.
+To remain in the middle is to orient correctly under pressure.
 
 When forces act through the centre,  
 load becomes bearable.  
 When they act off-axis,  
 even small forces destabilise the whole.
 
-This is not metaphor.
+This is mechanics.
 
-In mechanics, torque destroys what force alone cannot.  
-In life, misalignment does the same.
+In structural systems, torque destroys what force alone cannot.  
+In lived systems, misalignment produces the same outcome.
 
-You do not fracture because life asks too much.  
-You fracture because what is asked  
-is no longer passing cleanly through who you are.
+Fracture rarely occurs because life demands too much.  
+It occurs because demands no longer pass cleanly through identity.
 
 Integrity is the alignment that allows weight to be carried  
 without distortion.
 
-It does not make life easier.  
-It makes it survivable.
+It does not reduce demand.  
+It prevents deformation.
 
-This is why clarity matters more than strength.  
-Why honesty matters more than endurance.  
+This is why clarity outlasts strength.  
+Why honesty preserves endurance.  
 Why knowing where you stand  
 matters more than how hard you push.
 
 The middle is not comfort.  
-It is structural alignment.
+It is alignment.
 
-And alignment is the only condition  
+Alignment is the condition  
 under which pressure refines  
 instead of destroys.
